--- a/instagram19.html
+++ b/instagram19.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000215.jpg" title="Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago</small>
+                           </div>
+                           <img src="../lsphotos/image000215.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000216.jpg" title="Beautiful day for a race. Proud of Lovestar Factory Team strong finish! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Beautiful day for a race. Proud of Lovestar Factory Team strong finish! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000216.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000217.jpg" title="Beautiful course for the Illinois cyclocross finals! #cyclocross #lovestarfactoryteam #cycling #lovestarbicyclebags #fatbike #cyclocrosschicago" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Beautiful course for the Illinois cyclocross finals! #cyclocross #lovestarfactoryteam #cycling #lovestarbicyclebags #fatbike #cyclocrosschicago</small>
+                           </div>
+                           <img src="../lsphotos/image000217.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000643.jpg" title="@casadewaggoner crushing it start to finish this season. #montrosecx #lovestarfactoryteam #Cyclocross #cx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@casadewaggoner crushing it start to finish this season. #montrosecx #lovestarfactoryteam #Cyclocross #cx</small>
+                           </div>
+                           <img src="../lsphotos/image000643.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000644.jpg" title="Kudos to teammate @ddave12000 for nabbing 15th in the 4s and 6th in the 4/5s today!! #montrosecx #Cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Kudos to teammate @ddave12000 for nabbing 15th in the 4s and 6th in the 4/5s today!! #montrosecx #Cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000644.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000645.jpg" title="Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx</small>
+                           </div>
+                           <img src="../lsphotos/image000645.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000646.jpg" title="Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image000646.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000647.jpg" title="Big shout out to these to guys! @elliotlovestarbicycles and @casadewaggoner. Had such a blast racing CX with you guys this year!! Thanks for all the tips, encouragement, etc!  #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -168,97 +259,6 @@
                               <small>Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000226.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000227.jpg" title="A very wet and muddy #optoutside ride today. #fatbike #bikepackingbags #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A very wet and muddy #optoutside ride today. #fatbike #bikepackingbags #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000227.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000228.jpg" title="Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000228.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000651.jpg" title="Maiden voyage on the new Motobecane today. Considering I bought this bike as a cost-effective (relatively speaking of course!) straight from the internet all weather/commuter bike, I'm pleasantly surprised at how solid it is. Major kudos to @elliotlovestarbicycles for helping me assemble, lube, and adjust all the critical stuff. A few tweaks and upgrades and this will be a killer winter machine!! #lovestarfactoryteam #motobecane" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Maiden voyage on the new Motobecane today. Considering I bought this bike as a cost-effective (relatively speaking of course!) straight from the internet all weather/commuter bike, I'm pleasantly surprised at how solid it is. Major kudos to @elliotlovestarbicycles for helping me assemble, lube, and adjust all the critical stuff. A few tweaks and upgrades and this will be a killer winter machine!! #lovestarfactoryteam #motobecane</small>
-                           </div>
-                           <img src="../lsphotos/image000651.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000652.jpg" title="Fat biking in the snow is Seriously blowing my mind as I re-discover all my local trails... #fatbike #lovestarfactoryteam #bikepackingbags #bikepacking #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat biking in the snow is Seriously blowing my mind as I re-discover all my local trails... #fatbike #lovestarfactoryteam #bikepackingbags #bikepacking #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000652.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000229.jpg" title="Re-post from @elliotlovestarbicycles What a determined little cutie...won't be long now! #elliotlovestarbicycle #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Re-post from @elliotlovestarbicycles What a determined little cutie...won't be long now! #elliotlovestarbicycle #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000229.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000230.jpg" title="Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000230.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000534.jpg" title="#babysnub wanted to get in on the sand pit action. #ILRcx #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub wanted to get in on the sand pit action. #ILRcx #cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000534.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
