--- a/instagram34.html
+++ b/instagram34.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000397.jpg" title="Killer shot from the sand at #MelasCX Thanks to #jayloophotography for always making me look better than I am. #cyclocross #sandpit #cx #cycling #chicagocrosscup #bikechi #bicycle #belgianstyle #mud #race #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Killer shot from the sand at #MelasCX Thanks to #jayloophotography for always making me look better than I am. #cyclocross #sandpit #cx #cycling #chicagocrosscup #bikechi #bicycle #belgianstyle #mud #race #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000397.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000398.jpg" title="Thanks to @pattylouwho55 for the great pic! Lovestar Factory Team looking strong in the Sand at #MelasCX #cyclocross #cx #chicagocrosscup #bikechi #sandpit #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Thanks to @pattylouwho55 for the great pic! Lovestar Factory Team looking strong in the Sand at #MelasCX #cyclocross #cx #chicagocrosscup #bikechi #sandpit #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000398.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000399.jpg" title="Lovestar Factory Team riders before #MelasCX . It was a very Belgian course with lots of mud, rain and sand. Killer conditions, thanks to the organizers for a great race! #cyclocross #cx #chicagocrosscup #bikechi #lovestarbicyles #lovestarbicyclebags #melascx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team riders before #MelasCX . It was a very Belgian course with lots of mud, rain and sand. Killer conditions, thanks to the organizers for a great race! #cyclocross #cx #chicagocrosscup #bikechi #lovestarbicyles #lovestarbicyclebags #melascx</small>
+                           </div>
+                           <img src="../lsphotos/image000399.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000400.jpg" title="Happy Birthday to another Lovestar Factory racer in the making! I'm sure we'll see her out on the course next season!!! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Happy Birthday to another Lovestar Factory racer in the making! I'm sure we'll see her out on the course next season!!! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing</small>
+                           </div>
+                           <img src="../lsphotos/image000400.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000401.jpg" title="End of a long grueling race. Tougher the conditions, sweeter the finish! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>End of a long grueling race. Tougher the conditions, sweeter the finish! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing</small>
+                           </div>
+                           <img src="../lsphotos/image000401.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000402.jpg" title="Go @elliotlovestarbicycles! Pounding through that deep wet sand. Tough course. Tough conditions. Awesome ride. Pushing through to the end! #cyclocrosschicago #cyclocross #cycling #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags #lovestar #bikeracing" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Go @elliotlovestarbicycles! Pounding through that deep wet sand. Tough course. Tough conditions. Awesome ride. Pushing through to the end! #cyclocrosschicago #cyclocross #cycling #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags #lovestar #bikeracing</small>
+                           </div>
+                           <img src="../lsphotos/image000402.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000403.jpg" title="Great race today on a grueling course with tough, cold, rain, and muddy conditions. Go Lovestar Factory team! #lovestar #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclocross #bikeracing #elliotlovestar" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Great race today on a grueling course with tough, cold, rain, and muddy conditions. Go Lovestar Factory team! #lovestar #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclocross #bikeracing #elliotlovestar</small>
+                           </div>
+                           <img src="../lsphotos/image000403.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000404.jpg" title="Another great shot from @pattylouwho55. It was a tough course today, snow and ice made for very slick conditions. #cyclocross #chicago #cx #cycling #chicagocrosscup #lovestarbicycles #lovestarbicyclebags #ILRcx" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>New bike kicks! #giroempire #cycliing #cyclocross #lovestarbicycles #lovestarbicyclebags #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000416.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000417.jpg" title="With cross season well underway...it's easy to forget that winter is nigh. Picked up a beater set of wheels for using on the rollers... #cycling #rollers #bikechi #ineedafatbike #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>With cross season well underway...it's easy to forget that winter is nigh. Picked up a beater set of wheels for using on the rollers... #cycling #rollers #bikechi #ineedafatbike #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000417.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000418.jpg" title="Injury means no riding...but that ha left more time for sewing. Continuing to develop the Lovestar Shop Apron. Both solid and split bottom designs, with features like: bright interior pocket colors and a built-in magnet to hold screws and other small bits while you work. #handmade #lovestarbicycles #lovestarbicyclebags #cycling #SewRad #bikechi #madeinchicago #madeintheusa" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Injury means no riding...but that ha left more time for sewing. Continuing to develop the Lovestar Shop Apron. Both solid and split bottom designs, with features like: bright interior pocket colors and a built-in magnet to hold screws and other small bits while you work. #handmade #lovestarbicycles #lovestarbicyclebags #cycling #SewRad #bikechi #madeinchicago #madeintheusa</small>
-                           </div>
-                           <img src="../lsphotos/image000418.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000419.jpg" title="Got a pair of wicked awesome @defeet_international gloves today...continuing to up my accessorizing game. #cyclocross #cycling #lazersport #defeet #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Got a pair of wicked awesome @defeet_international gloves today...continuing to up my accessorizing game. #cyclocross #cycling #lazersport #defeet #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000419.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000420.jpg" title="Leg is still on the mend...in the meantime cleaning up the steed at home. #moots #psychloX #cyclocross #cx #recovery #lovestarbicycles #lovestarbicyclebags #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Leg is still on the mend...in the meantime cleaning up the steed at home. #moots #psychloX #cyclocross #cx #recovery #lovestarbicycles #lovestarbicyclebags #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000420.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000421.jpg" title="So...race was tough yesterday, I was feeling good, but about half way through the race I botched a barrier landing and crashed hard. I was able to grit through it and finished 34th, but my leg was killing me an felt really weak. Went to the Dr. today and turns out I have a partial tear in my right quad. Gonna miss the next couple of races...but I should be able to finish out the latter part of the season. #cyclocross #cycling #sadtrombone #therules #rulenumber5 #bikechi #lovestarbicyclebags #lovestarbicycles" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>So...race was tough yesterday, I was feeling good, but about half way through the race I botched a barrier landing and crashed hard. I was able to grit through it and finished 34th, but my leg was killing me an felt really weak. Went to the Dr. today and turns out I have a partial tear in my right quad. Gonna miss the next couple of races...but I should be able to finish out the latter part of the season. #cyclocross #cycling #sadtrombone #therules #rulenumber5 #bikechi #lovestarbicyclebags #lovestarbicycles</small>
-                           </div>
-                           <img src="../lsphotos/image000421.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000422.jpg" title="Ride interrupted. #cx #cyclocross #cycling #bikechi #dprt #lovestarbicycles #lovestarbicyclebags #gravel #gravelriot #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Ride interrupted. #cx #cyclocross #cycling #bikechi #dprt #lovestarbicycles #lovestarbicyclebags #gravel #gravelriot #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000422.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000423.jpg" title="Regram from @chateauduwaggoner of today's race at Dan Ryan Woods. Lovestar Factory Team game face at the start of the 4/5 race. #drwcx #cyclocross #cycling #cx #lovestarbicycles #lovestarbicyclebags #chicago #chicagocrosscup #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Regram from @chateauduwaggoner of today's race at Dan Ryan Woods. Lovestar Factory Team game face at the start of the 4/5 race. #drwcx #cyclocross #cycling #cx #lovestarbicycles #lovestarbicyclebags #chicago #chicagocrosscup #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000423.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
