--- a/instagram38.html
+++ b/instagram38.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000476.jpg" title="Coming soon to the streets of Chicagoland. #bikechi #cycling #championsystems #lovestarbicyclebags #customkit #styles4miles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Coming soon to the streets of Chicagoland. #bikechi #cycling #championsystems #lovestarbicyclebags #customkit #styles4miles</small>
+                           </div>
+                           <img src="../lsphotos/image000476.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000477.jpg" title="Judson to cemetery, solo to Illinois Beach State Park & then on to the in-laws in Winthrop Harbor. #lakemichigan #cycling #bikechi #lovestarbicyclebags #bmc #slx01 #lazer #smithoptics #illinoisbeachstatepark" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Judson to cemetery, solo to Illinois Beach State Park & then on to the in-laws in Winthrop Harbor. #lakemichigan #cycling #bikechi #lovestarbicyclebags #bmc #slx01 #lazer #smithoptics #illinoisbeachstatepark</small>
+                           </div>
+                           <img src="../lsphotos/image000477.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000478.jpg" title="So much good in this post ride picture. #belgian #waffles #moots #springflowers #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>So much good in this post ride picture. #belgian #waffles #moots #springflowers #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000478.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000479.jpg" title="Sunset group ride. #bikechi #velosmith #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset group ride. #bikechi #velosmith #cycling #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000479.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000480.jpg" title="Trying to finish up one more Saddle Pack for a customer before heading out to #Denver tomorrow... #lovestarbicyclebags #handmade #bikechi #bikepacking #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Trying to finish up one more Saddle Pack for a customer before heading out to #Denver tomorrow... #lovestarbicyclebags #handmade #bikechi #bikepacking #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000480.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000481.jpg" title="Putting some finishing touches on a set of Lovestar bags for a customer. Grey & Black with yellow interiors, this saddle pack / fuel bag combo makes a great do-anything bag combo. #handmade #cycling #bikechi #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Putting some finishing touches on a set of Lovestar bags for a customer. Grey & Black with yellow interiors, this saddle pack / fuel bag combo makes a great do-anything bag combo. #handmade #cycling #bikechi #lovestarbicyclebags #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000481.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000482.jpg" title="Lovestar Saddle Pack & Fuel Bag combo in progress for a customer. The Grey with black trim & yellow interior is really poppin' #lovestarbicyclebags #cycling #bikepacking #bikechi #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Saddle Pack & Fuel Bag combo in progress for a customer. The Grey with black trim & yellow interior is really poppin' #lovestarbicyclebags #cycling #bikepacking #bikechi #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000482.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000483.jpg" title="Long daddy/daughter ride today. He worn her pink jersey and had a post ride biscotti. #giro #futurecyclist #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Lovestar Ride Wallet prototype 3.0. Added some elastic bands that can be used to secure a micro pump to the bag and keep your jersey pocket organized. So close to the final design...watch for these on my etsy shop sometime in May! #handmade #lovestarbicyclebags #cycling #bikechi #essentials</small>
                            </div>
                            <img src="../lsphotos/image000495.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000496.jpg" title="Giant square of upholstery grade foam...beginnings of a custom padded case. #whatsinthecase #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Giant square of upholstery grade foam...beginnings of a custom padded case. #whatsinthecase #handmade #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000496.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000497.jpg" title="@shenanigans1313 yep! Should fit all that no problem. Fits in a jersey pocket...loaded up with 2 levers, a multi-tool, a CO2, a snack, my ID & cards, and the biggest patch kit that I could find. I hope to have these available on my Etsy shop starting in May. #lovestarbicyclebags #cycling #rideessentials #bikechi #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@shenanigans1313 yep! Should fit all that no problem. Fits in a jersey pocket...loaded up with 2 levers, a multi-tool, a CO2, a snack, my ID & cards, and the biggest patch kit that I could find. I hope to have these available on my Etsy shop starting in May. #lovestarbicyclebags #cycling #rideessentials #bikechi #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000497.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000498.jpg" title="Spring flowers. #moots #bikechi #springride #flowerpower #cycling  #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Spring flowers. #moots #bikechi #springride #flowerpower #cycling  #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000498.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000499.jpg" title="Hard to believe this is Chicago. Easter ride. #bikechi #cycling #lovestarbicyclebags #moots #lakemichigan #3rdcoast" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Hard to believe this is Chicago. Easter ride. #bikechi #cycling #lovestarbicyclebags #moots #lakemichigan #3rdcoast</small>
-                           </div>
-                           <img src="../lsphotos/image000499.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000500.jpg" title="Lots of solo riding today. Lovestar ride wallet & double espresso action shot. #bikechi #lovestarbicyclebags #cycling #coffedoping" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lots of solo riding today. Lovestar ride wallet & double espresso action shot. #bikechi #lovestarbicyclebags #cycling #coffedoping</small>
-                           </div>
-                           <img src="../lsphotos/image000500.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000501.jpg" title="Sometimes a quiet solo ride home with some unplanned stops is best. #bikechi #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sometimes a quiet solo ride home with some unplanned stops is best. #bikechi #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000501.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000502.jpg" title="Designing Lovestar team kits in MS paint... #lovestarbicyclebags #imaynotbefastbutilookgood" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Designing Lovestar team kits in MS paint... #lovestarbicyclebags #imaynotbefastbutilookgood</small>
-                           </div>
-                           <img src="../lsphotos/image000502.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
