--- a/instagram4.html
+++ b/instagram4.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000008.jpg" title="Tree Huggers. #bikechi #bicycle #cycling #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Tree Huggers. #bikechi #bicycle #cycling #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000008.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000004.jpg" title="One consistent thing I have found to be true of being a cycling Dad...is that my rides plans almost never go to plan. But I made it out today, and that is always a win. #dadlife #LovestarRaceClub #bicycle #bikechi #pedaltherapy" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>One consistent thing I have found to be true of being a cycling Dad...is that my rides plans almost never go to plan. But I made it out today, and that is always a win. #dadlife #LovestarRaceClub #bicycle #bikechi #pedaltherapy</small>
+                           </div>
+                           <img src="../lsphotos/image000004.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000016.jpg" title="'Twas a beautiful fall morning ride today. #leafpeeping #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>'Twas a beautiful fall morning ride today. #leafpeeping #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000016.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000081.jpg" title="Important ride this morning. #vote #cycling #bicycle #fatbike #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Important ride this morning. #vote #cycling #bicycle #fatbike #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000081.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000017.jpg" title="It's been a rough couple weeks for my cycling. Off the bike a lot with illness, sick kids, cold-wet & dark weather...this morning I got up early for a garage roller session to start getting my legs back under me. Felt really good in a horrifying painful kind of way. #cycling #bicycle #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>It's been a rough couple weeks for my cycling. Off the bike a lot with illness, sick kids, cold-wet & dark weather...this morning I got up early for a garage roller session to start getting my legs back under me. Felt really good in a horrifying painful kind of way. #cycling #bicycle #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000017.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000088.jpg" title="Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Blacked out #LovestarBicycleBags SaddlePack finished up during the kids naps today. #handmade #cycling #bicycle #bicyclebag #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000088.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000019.jpg" title="Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Post race bike cleaning time. #cycling #cyclocross #cx #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000019.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000541.jpg" title="Taking the top spot for riders under two 😊 #cyclocrosschicago #cycling #firstrace #adorablegrandson #bike #lovestarfactoryteam #youngestrider #thiskidlovestoride #happyday #fun" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -168,97 +259,6 @@
                               <small>Finished up this slick #LovestarBicycleBags shop apron. Lots of great features, heavy duty materials, and handmade construction...🚲🛠🔩⚙ #handmade #shoplife #bicycle #cycling #bikemechanic #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000092.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000093.jpg" title="Custom #LovestarBicycleBags shop apron on the sewing table right now. Really digging the color combo. #handmade #bikemechanic #cycling #bicycle #shoplife #realmenwearaprons #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #LovestarBicycleBags shop apron on the sewing table right now. Really digging the color combo. #handmade #bikemechanic #cycling #bicycle #shoplife #realmenwearaprons #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000093.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000009.jpg" title="Just two dudes on a bike ride. Eli rocking that #lovestarraceclub 2.0 kit. Also he legit brought a wrench with him in one of his jersey pockets and stopped several times to &quot;fix&quot; his bike." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Just two dudes on a bike ride. Eli rocking that #lovestarraceclub 2.0 kit. Also he legit brought a wrench with him in one of his jersey pockets and stopped several times to "fix" his bike.</small>
-                           </div>
-                           <img src="../lsphotos/image000009.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000029.jpg" title="Lovestar WI edition to Cedarburg with bonus #leafpeeping #myparlee #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Lovestar WI edition to Cedarburg with bonus #leafpeeping #myparlee #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000029.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000030.jpg" title="Cold morning & New kit day! #cycling #bicycle #capsnothats #champsys #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold morning & New kit day! #cycling #bicycle #capsnothats #champsys #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000030.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000031.jpg" title="Cold fall ride calls for coffee inside. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Cold fall ride calls for coffee inside. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000031.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000032.jpg" title="New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000032.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000033.jpg" title="New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek</small>
-                           </div>
-                           <img src="../lsphotos/image000033.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
