--- a/instagram1.html
+++ b/instagram1.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000808.jpg" title="Icy trails this morning. @agonz21 making it look easy. #fatbike #cycling #bikewinter #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Icy trails this morning. @agonz21 making it look easy. #fatbike #cycling #bikewinter #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000808.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000809.jpg" title="Lovestar Lagoons ride. #fatbike #cycling #bikewinter #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Lagoons ride. #fatbike #cycling #bikewinter #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000809.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000810.jpg" title="Trail time. #lovestarraceclub #greasesmudge" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Trail time. #lovestarraceclub #greasesmudge</small>
+                           </div>
+                           <img src="../lsphotos/image000810.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000807.jpg" title="Fat bike bromance. #fatbike #cycling #bikewinter #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat bike bromance. #fatbike #cycling #bikewinter #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000807.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000806.jpg" title="It's OK...I have another one on the other side. #fatbike #cycling #bikepacking #bikewinter #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>It's OK...I have another one on the other side. #fatbike #cycling #bikepacking #bikewinter #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000806.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000803.jpg" title="So many people say to me, &quot;Your son must be crazy to ride his bicycle all year round!&quot; Hmmmmmm? #cycling #cyclocross #bicycle #chicago #cyclocrosschicago #lovestar #lovestarbicycles #elliotlovestar #lovestarbicyclebags #bikebags #lovestarfactoryteam #diehard #outdoorsman #iadoremyson" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>So many people say to me, "Your son must be crazy to ride his bicycle all year round!" Hmmmmmm? #cycling #cyclocross #bicycle #chicago #cyclocrosschicago #lovestar #lovestarbicycles #elliotlovestar #lovestarbicyclebags #bikebags #lovestarfactoryteam #diehard #outdoorsman #iadoremyson</small>
+                           </div>
+                           <img src="../lsphotos/image000803.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000804.jpg" title="@agonz21 keeping it chill. #fatbike #cycling #bikepacking #bikewinter #icebike #lovestarbicyclebags #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@agonz21 keeping it chill. #fatbike #cycling #bikepacking #bikewinter #icebike #lovestarbicyclebags #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000804.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000805.jpg" title="&quot;Stop, collaborate, and listen.&quot; First ever ride across a frozen lake. Thanks to @elliotlovestarbicycles for the photos and pep talk and bike #lovestarraceclub #fatbikenchill" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -168,97 +259,6 @@
                               <small>Cold Sunrise #fatbike #cycling #bicycle #snowbike #bikechi #bikepacking #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000791.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000790.jpg" title="Fresh trails. #fatbike #cycling #bicycle #lovestarbicyclebags #bikepacking #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fresh trails. #fatbike #cycling #bicycle #lovestarbicyclebags #bikepacking #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000790.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000789.jpg" title="Who says we can't still have our Saturday morning coffee in Glencoe? #winterbike #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Who says we can't still have our Saturday morning coffee in Glencoe? #winterbike #fatbike #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000789.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000788.jpg" title="Roads? Where we're going we don't need roads..." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Roads? Where we're going we don't need roads...</small>
-                           </div>
-                           <img src="../lsphotos/image000788.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000787.jpg" title="Fresh snow sunrise ride with @agonz21 & @ddave12000 🚲❄️#fatbike #cycling #bicycle #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fresh snow sunrise ride with @agonz21 & @ddave12000 🚲❄️#fatbike #cycling #bicycle #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000787.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000786.jpg" title="18 below. Riding across a frozen lagoon at sunrise...adrenaline is a great way to warm up when you're cold 😳❄️🚲⛸#fatbike #bicycle #cycling #icebike #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>18 below. Riding across a frozen lagoon at sunrise...adrenaline is a great way to warm up when you're cold 😳❄️🚲⛸#fatbike #bicycle #cycling #icebike #bikechi #bikepacking #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000786.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000785.jpg" title="Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000785.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000783.jpg" title="Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000783.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
