--- a/instagram11.html
+++ b/instagram11.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000125.jpg" title="And so his love of cycling began... #happybirthday #futurecyclist #cycling #cyclocrosschicago #cyclocross #elliotlovestarbicycle #lovestarfactoryteam #lovestar #lovestarbicyclebags #soitbegins #happybirthdaytoyou #loveyoubeyondmeasure" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>And so his love of cycling began... #happybirthday #futurecyclist #cycling #cyclocrosschicago #cyclocross #elliotlovestarbicycle #lovestarfactoryteam #lovestar #lovestarbicyclebags #soitbegins #happybirthdaytoyou #loveyoubeyondmeasure</small>
+                           </div>
+                           <img src="../lsphotos/image000125.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000126.jpg" title="Sweet Friday morning double loop half century with Team Lovestar #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Sweet Friday morning double loop half century with Team Lovestar #lovestarbicyclebags #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000126.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000576.jpg" title="So proud watching this sweet THREE YEAR OLD ride her bike!?!?!! #bike #cycling #adorablegrandaughter #lovestarfactoryteam #lovestoride #futurecyclocrosschamp #amazing #proudgrandma #happyday" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>So proud watching this sweet THREE YEAR OLD ride her bike!?!?!! #bike #cycling #adorablegrandaughter #lovestarfactoryteam #lovestoride #futurecyclocrosschamp #amazing #proudgrandma #happyday</small>
+                           </div>
+                           <img src="../lsphotos/image000576.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000127.jpg" title="Cold May Morning. #cycling #bicycle #moots #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold May Morning. #cycling #bicycle #moots #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000127.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000129.jpg" title="Looks like summer...temps haven't quite caught on to the idea yet. #cycling #bicycle #moots #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Looks like summer...temps haven't quite caught on to the idea yet. #cycling #bicycle #moots #lovestarbicyclebags #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000129.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000130.jpg" title="Pre-ride #almanzo100 dinner at Whistle Binkies with the team #5smilesoutta6 #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Pre-ride #almanzo100 dinner at Whistle Binkies with the team #5smilesoutta6 #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000130.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000131.jpg" title="Fun times somewhere near mile 50 at #almanzo100 with Team Lovestar #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Fun times somewhere near mile 50 at #almanzo100 with Team Lovestar #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000131.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000535.jpg" title="Crushing gravel. #Almanzo100 #lovestarfactoryteam #cycling #bicycle" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -172,97 +263,6 @@ So many cool #fog photos this morning... #cycling #moots #bicycle #lovestarfacto
                               <small>From today's foggy sunrise ride. #lovestarfactoryteam #cycling PC: @elliotlovestarbicycles</small>
                            </div>
                            <img src="../lsphotos/image000586.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000587.jpg" title="Foggy Sunrise ride. #lovestarfactoryteam #cycling #bicycle #bikechi #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Foggy Sunrise ride. #lovestarfactoryteam #cycling #bicycle #bikechi #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000587.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000588.jpg" title="Lakefront riding this morning. #cycling #lakemichigan #bicycle #bikechi #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lakefront riding this morning. #cycling #lakemichigan #bicycle #bikechi #moots #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000588.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000589.jpg" title="Smiles for miles. #babySNUB #lovestarfactoryteam #cycling #bicycle #clearybikes #bikechi #adventuredad #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Smiles for miles. #babySNUB #lovestarfactoryteam #cycling #bicycle #clearybikes #bikechi #adventuredad #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image000589.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000590.jpg" title="Solo Miles. #lovestarfactoryteam #cycling #bicycle #moots #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Solo Miles. #lovestarfactoryteam #cycling #bicycle #moots #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000590.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000591.jpg" title="May Flowers. #cycling #moots #bicycle #lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>May Flowers. #cycling #moots #bicycle #lovestarfactoryteam #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000591.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000134.jpg" title="Mid-ride break. #snacktime #adventuredad #cycling #futurecyclist #fatbike #clearybikes #therobertaxleproject #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Mid-ride break. #snacktime #adventuredad #cycling #futurecyclist #fatbike #clearybikes #therobertaxleproject #lovestarbicyclebags #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000134.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000592.jpg" title="Great early ride with @agonz21 #cycling #bikechi #lovestarfactoryteam #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Great early ride with @agonz21 #cycling #bikechi #lovestarfactoryteam #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000592.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
