--- a/instagram13.html
+++ b/instagram13.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000600.jpg" title="Successful #barryroubaix 2016! #lovestarfactoryteam fielded 8 riders who spend the day crushing some hot dry and dusty gravel. #gravelgrinder #moots #bicycle #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Successful #barryroubaix 2016! #lovestarfactoryteam fielded 8 riders who spend the day crushing some hot dry and dusty gravel. #gravelgrinder #moots #bicycle #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000600.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000601.jpg" title="Ready to rock! #barryroubaix #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Ready to rock! #barryroubaix #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000601.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000602.jpg" title="Hotel room gear staging for #barryroubaix tomorrow. #cycling #gravelgrinder #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Hotel room gear staging for #barryroubaix tomorrow. #cycling #gravelgrinder #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000602.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000603.jpg" title="Group selfie at Founders. #BarryRoubaix #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Group selfie at Founders. #BarryRoubaix #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000603.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000604.jpg" title="#lovestarfactoryteam having lunch at @bellsbrewery en route to #BarryRoubaix" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarfactoryteam having lunch at @bellsbrewery en route to #BarryRoubaix</small>
+                           </div>
+                           <img src="../lsphotos/image000604.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000141.jpg" title="Riding Kettle today gettin' my legs ripped off by @jobywankenoby #cycling #mountainbike #fatbike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Riding Kettle today gettin' my legs ripped off by @jobywankenoby #cycling #mountainbike #fatbike #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000141.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000605.jpg" title="Mini group ride. #lovestarfactoryteam #striderbikes #clearybikes #teammates" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Mini group ride. #lovestarfactoryteam #striderbikes #clearybikes #teammates</small>
+                           </div>
+                           <img src="../lsphotos/image000605.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000142.jpg" title="Calm #bicycle #moots #cycling #lovestarbicyclebags #lakemichigan #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>#tbt to @casadewaggoner leading the #lovestarfactoryteam across the finish line at last year's #Almanzo 100</small>
                            </div>
                            <img src="../lsphotos/image000611.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000612.jpg" title="Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel</small>
-                           </div>
-                           <img src="../lsphotos/image000612.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000613.jpg" title="DPRT with this guy. #lovestarfactoryteam #cycling #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>DPRT with this guy. #lovestarfactoryteam #cycling #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000613.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000149.jpg" title="Resistance training. #adventuredad #cycling #fatbike #thulechariot #lovestarbicyclebags #therobertaxleproject" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Resistance training. #adventuredad #cycling #fatbike #thulechariot #lovestarbicyclebags #therobertaxleproject</small>
-                           </div>
-                           <img src="../lsphotos/image000149.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000614.jpg" title="Got a quick ride in during the kids nap today...finished it off by playing around on my neighborhood pirate trails. #cycling #cyclocross #cyclocross365 #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Got a quick ride in during the kids nap today...finished it off by playing around on my neighborhood pirate trails. #cycling #cyclocross #cyclocross365 #moots #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000614.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000150.jpg" title="#babyARC was up most of last night feeling sick & sad. After a tough morning, I just bundled him up and we went for a ride, he passed out after the first 100 feet...so we rode around for an hour until he woke up. Fresh air and sunshine are good medicine. #outsideisfree #optoutside #cycling #fatbike #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babyARC was up most of last night feeling sick & sad. After a tough morning, I just bundled him up and we went for a ride, he passed out after the first 100 feet...so we rode around for an hour until he woke up. Fresh air and sunshine are good medicine. #outsideisfree #optoutside #cycling #fatbike #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000150.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000151.jpg" title="Nothing says Spring like a fresh dusting of snow. #cycling #bikechi #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Nothing says Spring like a fresh dusting of snow. #cycling #bikechi #moots #psychloX #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000151.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000152.jpg" title="Good Friday sunrise ride. #cycling #bikechi #moots #psychloX #cannondale #superX #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Good Friday sunrise ride. #cycling #bikechi #moots #psychloX #cannondale #superX #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000152.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
