--- a/instagram14.html
+++ b/instagram14.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000612.jpg" title="Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel</small>
+                           </div>
+                           <img src="../lsphotos/image000612.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000613.jpg" title="DPRT with this guy. #lovestarfactoryteam #cycling #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>DPRT with this guy. #lovestarfactoryteam #cycling #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000613.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000149.jpg" title="Resistance training. #adventuredad #cycling #fatbike #thulechariot #lovestarbicyclebags #therobertaxleproject" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Resistance training. #adventuredad #cycling #fatbike #thulechariot #lovestarbicyclebags #therobertaxleproject</small>
+                           </div>
+                           <img src="../lsphotos/image000149.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000614.jpg" title="Got a quick ride in during the kids nap today...finished it off by playing around on my neighborhood pirate trails. #cycling #cyclocross #cyclocross365 #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Got a quick ride in during the kids nap today...finished it off by playing around on my neighborhood pirate trails. #cycling #cyclocross #cyclocross365 #moots #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000614.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000150.jpg" title="#babyARC was up most of last night feeling sick & sad. After a tough morning, I just bundled him up and we went for a ride, he passed out after the first 100 feet...so we rode around for an hour until he woke up. Fresh air and sunshine are good medicine. #outsideisfree #optoutside #cycling #fatbike #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babyARC was up most of last night feeling sick & sad. After a tough morning, I just bundled him up and we went for a ride, he passed out after the first 100 feet...so we rode around for an hour until he woke up. Fresh air and sunshine are good medicine. #outsideisfree #optoutside #cycling #fatbike #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000150.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000151.jpg" title="Nothing says Spring like a fresh dusting of snow. #cycling #bikechi #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Nothing says Spring like a fresh dusting of snow. #cycling #bikechi #moots #psychloX #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000151.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000152.jpg" title="Good Friday sunrise ride. #cycling #bikechi #moots #psychloX #cannondale #superX #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Good Friday sunrise ride. #cycling #bikechi #moots #psychloX #cannondale #superX #lovestarfactoryteam #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000152.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000153.jpg" title="Spring is supposedly here in #Chicago...complete with sleet, snow & freezing rain. Had to mount up some mudguards for tomorrow's ride... #cycling #bikechi #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>That was a good ride. #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000620.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000621.jpg" title="Great ride, great bike, great friends. #myparlee #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Great ride, great bike, great friends. #myparlee #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000621.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000622.jpg" title="Smiles for Miles with @agonz21 #cycling #lovestarfactoryteam #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Smiles for Miles with @agonz21 #cycling #lovestarfactoryteam #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000622.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000160.jpg" title="Enjoying a few more sunrise rides before the crushing blackness of #daylightsavingstime kicks in this weekend. #cycling #bicycle #moots #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Enjoying a few more sunrise rides before the crushing blackness of #daylightsavingstime kicks in this weekend. #cycling #bicycle #moots #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000160.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000161.jpg" title="Pre-dawn miles. #cycling #bicycle #moots #psychloX #lovestarbicyclebags #lakemichigan" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pre-dawn miles. #cycling #bicycle #moots #psychloX #lovestarbicyclebags #lakemichigan</small>
-                           </div>
-                           <img src="../lsphotos/image000161.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000162.jpg" title="Gonna try getting #ontherivet with the #moots this gravel season. #gravelgrinder #gravel #bicycle #cycling #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gonna try getting #ontherivet with the #moots this gravel season. #gravelgrinder #gravel #bicycle #cycling #psychloX #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000162.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000163.jpg" title="Huge cargo capacity, and a flashy peacock blue interior. #handmade #lovestarbicyclebags #bicyclebag #bicycle #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Huge cargo capacity, and a flashy peacock blue interior. #handmade #lovestarbicyclebags #bicyclebag #bicycle #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000163.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000164.jpg" title="Finishing up a custom roll top porteur rack bag. Customer designed the bag, I had the privilege of making it. #handmade #lovestarbicyclebags #cycling #cordura #bicycle #bicyclebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finishing up a custom roll top porteur rack bag. Customer designed the bag, I had the privilege of making it. #handmade #lovestarbicyclebags #cycling #cordura #bicycle #bicyclebag</small>
-                           </div>
-                           <img src="../lsphotos/image000164.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
