--- a/instagram16.html
+++ b/instagram16.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000628.jpg" title="Suns out guns out. #cycling #lovestarfactoryteam #theponyshop #bikecommute" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Suns out guns out. #cycling #lovestarfactoryteam #theponyshop #bikecommute</small>
+                           </div>
+                           <img src="../lsphotos/image000628.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000173.jpg" title="Such a stud...he didn't even need studded tire's. #dadjoke #fatbike #bikewinter #lovestarbicyclebags #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Such a stud...he didn't even need studded tire's. #dadjoke #fatbike #bikewinter #lovestarbicyclebags #lovestarfactoryteam #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000173.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000174.jpg" title="Fresh snow this morning with @agonz21 #fatbike #bikewinter #lovestarbicyclebags #bikepacking #bikepackingbags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fresh snow this morning with @agonz21 #fatbike #bikewinter #lovestarbicyclebags #bikepacking #bikepackingbags</small>
+                           </div>
+                           <img src="../lsphotos/image000174.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000175.jpg" title="Happy Valentines Day! #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy Valentines Day! #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000175.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000629.jpg" title="Yeah Dad #lovestarfactoryteam #cycling #focus" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Yeah Dad #lovestarfactoryteam #cycling #focus</small>
+                           </div>
+                           <img src="../lsphotos/image000629.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000630.jpg" title="Frosty miles this morning. #cycling #lovestarfactoryteam #moots #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Frosty miles this morning. #cycling #lovestarfactoryteam #moots #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000630.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000176.jpg" title="Sunset. #fatbike #bikepackingbags #bikepacking #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset. #fatbike #bikepackingbags #bikepacking #cycling #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000176.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000177.jpg" title="Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>It may have been a coincidence...but I was the only one not running studded tire's tonight...and I was the only one who crashed twice before even getting to the trailhead. Sitting at home looking at studded tire's online...#fatbike #bikewinter #bikepackingbags #bikepacking #pogies #lovestarbicyclebags </small>
                            </div>
                            <img src="../lsphotos/image000185.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000186.jpg" title="Testing begins... #pogies #handmade #lovestarbicyclebags #fatbike #bikewinter #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Testing begins... #pogies #handmade #lovestarbicyclebags #fatbike #bikewinter #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000186.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000187.jpg" title="Couldn't resist a Daddy / Daughter #pogies shot. #handmade #bikewinter #fatbike #lovestarbicyclebags #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Couldn't resist a Daddy / Daughter #pogies shot. #handmade #bikewinter #fatbike #lovestarbicyclebags #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000187.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000188.jpg" title="Finished these up Just in time for some wicked cold temps today. #lovestarbicyclebags #pogies #fatbike #bikewinter #handmade #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished these up Just in time for some wicked cold temps today. #lovestarbicyclebags #pogies #fatbike #bikewinter #handmade #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000188.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000189.jpg" title="Another angle. #fatbike #pogies #lovestarbicyclebags #bikepackingbags #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Another angle. #fatbike #pogies #lovestarbicyclebags #bikepackingbags #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000189.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000190.jpg" title="1st full sized pogie done. Fit seems pretty solid, time to assemble #2. #handmade #pogies #bikepackingbags #fatbike #lovestarbicyclebags #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>1st full sized pogie done. Fit seems pretty solid, time to assemble #2. #handmade #pogies #bikepackingbags #fatbike #lovestarbicyclebags #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000190.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000191.jpg" title="#babySNUB 's micro-pogies worked out so well, I started cutting fabric today to make my own pair...we'll see how it goes #lovestarbicyclebags #handmade #bikewinter #pogies #cycling #bikepacking #bikepackingbags #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babySNUB 's micro-pogies worked out so well, I started cutting fabric today to make my own pair...we'll see how it goes #lovestarbicyclebags #handmade #bikewinter #pogies #cycling #bikepacking #bikepackingbags #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000191.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000635.jpg" title="#lovestarfactoryteam Rollin' fat into the coffee shop. #fatbike #bikewinter #cycling #2fat2furious #stupidcarruinedmypicture " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam Rollin' fat into the coffee shop. #fatbike #bikewinter #cycling #2fat2furious #stupidcarruinedmypicture </small>
-                           </div>
-                           <img src="../lsphotos/image000635.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
