--- a/instagram18.html
+++ b/instagram18.html
@@ -6,6 +6,101 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000203.jpg" title="First (very icy) miles of 2016! #fatbike #fatbikefriday #cycling #bicycle #lovestarbicyclebags #bikepackingbags #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First (very icy) miles of 2016! #fatbike #fatbikefriday #cycling #bicycle #lovestarbicyclebags #bikepackingbags #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000203.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000204.jpg" title="Sunset on the final ride for 2015. #fatbike #bikepacking #bikepackingbags #lovestarbicyclebags #cycling #bicycle #festive500 #raphafestive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset on the final ride for 2015. #fatbike #bikepacking #bikepackingbags #lovestarbicyclebags #cycling #bicycle #festive500 #raphafestive500</small>
+                           </div>
+                           <img src="../lsphotos/image000204.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000205.jpg" title="Blue skies & fresh snow. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #festive500 #raphafestive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Blue skies & fresh snow. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #festive500 #raphafestive500</small>
+                           </div>
+                           <img src="../lsphotos/image000205.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000206.jpg" title="The #lakemichigan surf was gnarly this morning. Snow and sand for today's #raphafestive500 ride. Weather, time and other commitments have pretty much precluded me from finishing this years #festive500 ...but I'm gonna keep logging miles until it's done. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #illinoisbeachstatepark" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The #lakemichigan surf was gnarly this morning. Snow and sand for today's #raphafestive500 ride. Weather, time and other commitments have pretty much precluded me from finishing this years #festive500 ...but I'm gonna keep logging miles until it's done. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #illinoisbeachstatepark</small>
+                           </div>
+                           <img src="../lsphotos/image000206.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000638.jpg" title="The warm before the storm.  Good job getting out.  @elliotlovestarbicycles with @repostapp.
+・・・
+Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocross #cx #moots #psychloX #bicycle #lakemichigan #lovestarfactoryteam #festive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>mootscycles</h4>
+                              <small>The warm before the storm.  Good job getting out.  @elliotlovestarbicycles with @repostapp.
+・・・
+Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocross #cx #moots #psychloX #bicycle #lakemichigan #lovestarfactoryteam #festive500</small>
+                           </div>
+                           <img src="../lsphotos/image000638.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000086.jpg" title="Robert McClory Path & the Illinois/Wisconsin border. #fatbike #lovestarbicyclebags #raphafestive500 #festive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Robert McClory Path & the Illinois/Wisconsin border. #fatbike #lovestarbicyclebags #raphafestive500 #festive500</small>
+                           </div>
+                           <img src="../lsphotos/image000086.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000207.jpg" title="Finally getting some snow under these tire's! #fatbike #festive500 #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bicycle #raphafestive500" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finally getting some snow under these tire's! #fatbike #festive500 #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bicycle #raphafestive500</small>
+                           </div>
+                           <img src="../lsphotos/image000207.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000208.jpg" title="Driving snow, soul crushing wind & 10psi made for a short #raphafestive500 ride today. #fatbike #cycling #bicycle #festive500 #lovestarbicyclebags #bikepackingbags #bikepacking" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +263,6 @@
                               <small>Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground</small>
                            </div>
                            <img src="../lsphotos/image000214.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000215.jpg" title="Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago</small>
-                           </div>
-                           <img src="../lsphotos/image000215.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000216.jpg" title="Beautiful day for a race. Proud of Lovestar Factory Team strong finish! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Beautiful day for a race. Proud of Lovestar Factory Team strong finish! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000216.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000217.jpg" title="Beautiful course for the Illinois cyclocross finals! #cyclocross #lovestarfactoryteam #cycling #lovestarbicyclebags #fatbike #cyclocrosschicago" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Beautiful course for the Illinois cyclocross finals! #cyclocross #lovestarfactoryteam #cycling #lovestarbicyclebags #fatbike #cyclocrosschicago</small>
-                           </div>
-                           <img src="../lsphotos/image000217.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000643.jpg" title="@casadewaggoner crushing it start to finish this season. #montrosecx #lovestarfactoryteam #Cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@casadewaggoner crushing it start to finish this season. #montrosecx #lovestarfactoryteam #Cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000643.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000644.jpg" title="Kudos to teammate @ddave12000 for nabbing 15th in the 4s and 6th in the 4/5s today!! #montrosecx #Cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Kudos to teammate @ddave12000 for nabbing 15th in the 4s and 6th in the 4/5s today!! #montrosecx #Cyclocross #cx #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000644.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000645.jpg" title="Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Great photo courtesy of @elliotlovestarbicycles #lovestarfactoryteam #montrosecx</small>
-                           </div>
-                           <img src="../lsphotos/image000645.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000646.jpg" title="Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Portable hot tub...must be a cross race. #Cyclocross #cx #lovestarfactoryteam #montrosecx #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image000646.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
