--- a/instagram21.html
+++ b/instagram21.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000231.jpg" title="Shortcut. #fatbike #cycling #bikepacking #bikebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Shortcut. #fatbike #cycling #bikepacking #bikebag #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000231.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000666.jpg" title="Thanks to @lt250rrcr45 for catching this great shot at #camptonCX this past weekend. #cyclocross #cx #cycling #championsystem #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Thanks to @lt250rrcr45 for catching this great shot at #camptonCX this past weekend. #cyclocross #cx #cycling #championsystem #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000666.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000667.jpg" title="Breaking away after a barrier for the final long sprint. #lovestarfactoryteam #camptonCX #cyclocross #cx #moots #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Breaking away after a barrier for the final long sprint. #lovestarfactoryteam #camptonCX #cyclocross #cx #moots #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000667.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000668.jpg" title="Sunset Race today at #camptonCX great course with lots of fun technical sections. #lovestarfactoryteam #cyclocross #cx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset Race today at #camptonCX great course with lots of fun technical sections. #lovestarfactoryteam #cyclocross #cx</small>
+                           </div>
+                           <img src="../lsphotos/image000668.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000669.jpg" title="Great race today at #CamptonCX. On the way to 9th place in the 4/5 race. #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Great race today at #CamptonCX. On the way to 9th place in the 4/5 race. #lovestarfactoryteam #lsb</small>
+                           </div>
+                           <img src="../lsphotos/image000669.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000670.jpg" title="Had a great crew out at #camptonCX today. Two top 10 finishes for #lovestarfactoryteam riders! #cyclocross #cx #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Had a great crew out at #camptonCX today. Two top 10 finishes for #lovestarfactoryteam riders! #cyclocross #cx #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000670.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000232.jpg" title="Concentrating hard to crush those barriers!!! : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #firstrace #youngestontheteam #determinedlikenoother" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Concentrating hard to crush those barriers!!! : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #firstrace #youngestontheteam #determinedlikenoother</small>
+                           </div>
+                           <img src="../lsphotos/image000232.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000233.jpg" title="Exciting race. Tough conditions. #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclinginthemidwest" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -168,97 +259,6 @@
                               <small>#lovestarfactoryteam on the under-3yo podium!! #babysnub #cyclocross #cx #cylist</small>
                            </div>
                            <img src="../lsphotos/image000677.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000678.jpg" title="Fun times watching #evanstoncx today. Looking good @ddave12000 #lovestarfactoryteam #cx #cyclocross" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Fun times watching #evanstoncx today. Looking good @ddave12000 #lovestarfactoryteam #cx #cyclocross</small>
-                           </div>
-                           <img src="../lsphotos/image000678.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000679.jpg" title="Very competitive sub-3 year old category today! #cyclocross #futurecyclist #cycling #babysnub #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Very competitive sub-3 year old category today! #cyclocross #futurecyclist #cycling #babysnub #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000679.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000239.jpg" title="#babysnub steppin' up to the line for her first #cyclocross race! Some very Belgian conditions to start her racing career. #lovestarfactoryteam #lovestarbicyclebags #cx #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub steppin' up to the line for her first #cyclocross race! Some very Belgian conditions to start her racing career. #lovestarfactoryteam #lovestarbicyclebags #cx #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000239.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000240.jpg" title="First race for the youngest member of the Lovestar Factory Team!!! Go #babysnub!!!!!! #cyclocrosschicago #cycling #lovestarfactoryteam #lovestarbicyclebags #2yearsoldandalreadyhooked" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>First race for the youngest member of the Lovestar Factory Team!!! Go #babysnub!!!!!! #cyclocrosschicago #cycling #lovestarfactoryteam #lovestarbicyclebags #2yearsoldandalreadyhooked</small>
-                           </div>
-                           <img src="../lsphotos/image000240.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000241.jpg" title="Treacherous conditions today on course. Go Lovestar Factory Team! Go Elliot!!! #cyclocrosschicago #cycling #cyclocrossinthemidwest #cyclocross #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Treacherous conditions today on course. Go Lovestar Factory Team! Go Elliot!!! #cyclocrosschicago #cycling #cyclocrossinthemidwest #cyclocross #lovestarfactoryteam #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000241.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000242.jpg" title="Fall commute. #bikepacking #lovestarbicyclebags #cycling #fatbike #bikecommute" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fall commute. #bikepacking #lovestarbicyclebags #cycling #fatbike #bikecommute</small>
-                           </div>
-                           <img src="../lsphotos/image000242.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000243.jpg" title="being a new fat-bike owner I am actually excited for winter this year...however, the last couple of days were a reminder that I have to make it through two months of 30-40 degree temps and rain first. #sigh #fatbike #lovestarbicyclebags #bikepacking #bikecommute" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>being a new fat-bike owner I am actually excited for winter this year...however, the last couple of days were a reminder that I have to make it through two months of 30-40 degree temps and rain first. #sigh #fatbike #lovestarbicyclebags #bikepacking #bikecommute</small>
-                           </div>
-                           <img src="../lsphotos/image000243.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
