--- a/instagram23.html
+++ b/instagram23.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000686.jpg" title="#HopkinsCX today. Fun and fast course! @casadewaggoner flying through and looking strong. #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#HopkinsCX today. Fun and fast course! @casadewaggoner flying through and looking strong. #cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000686.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000250.jpg" title="#lovestarfactoryteam doing some dirt shreddin' today. #cycling #mountainbike #lovestarbicyclebags #bikechi #palos" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam doing some dirt shreddin' today. #cycling #mountainbike #lovestarbicyclebags #bikechi #palos</small>
+                           </div>
+                           <img src="../lsphotos/image000250.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000251.jpg" title="This Giant bag opens to face the rider, is waterproof, and has some little details like the upcycled bicycle tire handle to complete a very cool build. #handmade #cycling #lovestarbicyclebags #bicyclebag #bikecommute" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>This Giant bag opens to face the rider, is waterproof, and has some little details like the upcycled bicycle tire handle to complete a very cool build. #handmade #cycling #lovestarbicyclebags #bicyclebag #bikecommute</small>
+                           </div>
+                           <img src="../lsphotos/image000251.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000252.jpg" title="Custom #lovestarbicyclebags front basket commuter case. #handmade #bicyclebag #cycling #bikecommute #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #lovestarbicyclebags front basket commuter case. #handmade #bicyclebag #cycling #bikecommute #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000252.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000687.jpg" title="Our &quot;morning&quot; Hasselhoff ride. #bbc #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Our "morning" Hasselhoff ride. #bbc #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000687.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000253.jpg" title="Sneak peak of some intense design work for a custom bag project. #handmade #lovestarbicyclebags #bicyclebag #cycling #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sneak peak of some intense design work for a custom bag project. #handmade #lovestarbicyclebags #bicyclebag #cycling #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000253.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000688.jpg" title="#lovestarfactoryteam juniors squad had a big day of riding. #futurecyclist #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam juniors squad had a big day of riding. #futurecyclist #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000688.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000689.jpg" title="#babysnub saw some BMX guys doing a bunny hop competition and decided to show off her shred skills. #babygnar #futurecyclist #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Out of the ashes, come upgrades...150mm carbon thru-axle upgrades to be specific. #fatbike #lovestarbicyclebags #bikepacking #framebag #cycling #bicycle #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000259.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000260.jpg" title="Had some help in the shop today. #fatbike #futurecyclist #cycling #bicycle #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Had some help in the shop today. #fatbike #futurecyclist #cycling #bicycle #lovestarbicyclebags #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000260.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000695.jpg" title="Riding with power is supposed to take your training to the next level...right? #lovestarfactoryteam #cycling #fatbike #framebag #bikepacking #cyclist #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Riding with power is supposed to take your training to the next level...right? #lovestarfactoryteam #cycling #fatbike #framebag #bikepacking #cyclist #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000695.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000696.jpg" title="One more...because the fog was just so good. #lovestarfactoryteam #cycling #roadie #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>One more...because the fog was just so good. #lovestarfactoryteam #cycling #roadie #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000696.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000697.jpg" title="Foggy Sunday morning hammer fest. #lovestarfactoryteam #roadie #cycling #cyclist #bikechi #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Foggy Sunday morning hammer fest. #lovestarfactoryteam #roadie #cycling #cyclist #bikechi #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000697.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000698.jpg" title="First ride on the whip in quite some time. It had been on long term loan to a friend whose bike had been stolen...I feel so speedy 😄 #lovestarfactoryteam #cycling #cyclist #bmc #roadie" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First ride on the whip in quite some time. It had been on long term loan to a friend whose bike had been stolen...I feel so speedy 😄 #lovestarfactoryteam #cycling #cyclist #bmc #roadie</small>
-                           </div>
-                           <img src="../lsphotos/image000698.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000261.jpg" title="Family #fatbike adventures. #Babysnub #lovestarbicyclebags #cycling #adventuredad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Family #fatbike adventures. #Babysnub #lovestarbicyclebags #cycling #adventuredad</small>
-                           </div>
-                           <img src="../lsphotos/image000261.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000262.jpg" title="Fat bike & Flowers for my commute today. #fatbike #cycling #bikecommute #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat bike & Flowers for my commute today. #fatbike #cycling #bikecommute #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000262.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
