--- a/instagram24.html
+++ b/instagram24.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000260.jpg" title="Had some help in the shop today. #fatbike #futurecyclist #cycling #bicycle #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Had some help in the shop today. #fatbike #futurecyclist #cycling #bicycle #lovestarbicyclebags #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000260.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000695.jpg" title="Riding with power is supposed to take your training to the next level...right? #lovestarfactoryteam #cycling #fatbike #framebag #bikepacking #cyclist #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Riding with power is supposed to take your training to the next level...right? #lovestarfactoryteam #cycling #fatbike #framebag #bikepacking #cyclist #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000695.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000696.jpg" title="One more...because the fog was just so good. #lovestarfactoryteam #cycling #roadie #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>One more...because the fog was just so good. #lovestarfactoryteam #cycling #roadie #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000696.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000697.jpg" title="Foggy Sunday morning hammer fest. #lovestarfactoryteam #roadie #cycling #cyclist #bikechi #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Foggy Sunday morning hammer fest. #lovestarfactoryteam #roadie #cycling #cyclist #bikechi #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000697.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000698.jpg" title="First ride on the whip in quite some time. It had been on long term loan to a friend whose bike had been stolen...I feel so speedy 😄 #lovestarfactoryteam #cycling #cyclist #bmc #roadie" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First ride on the whip in quite some time. It had been on long term loan to a friend whose bike had been stolen...I feel so speedy 😄 #lovestarfactoryteam #cycling #cyclist #bmc #roadie</small>
+                           </div>
+                           <img src="../lsphotos/image000698.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000261.jpg" title="Family #fatbike adventures. #Babysnub #lovestarbicyclebags #cycling #adventuredad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Family #fatbike adventures. #Babysnub #lovestarbicyclebags #cycling #adventuredad</small>
+                           </div>
+                           <img src="../lsphotos/image000261.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000262.jpg" title="Fat bike & Flowers for my commute today. #fatbike #cycling #bikecommute #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat bike & Flowers for my commute today. #fatbike #cycling #bikecommute #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000262.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000699.jpg" title="Riding the 'goons. #fatbike #bikechi #lovestarfactoryteam #greenbaycycles" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,105 +259,6 @@
                               <small>Family ride! #adventuredad #fatbike #striderbikes #lovestarfactoryteam #cycling #bicycle #bikechi #NorthBranchTrail</small>
                            </div>
                            <img src="../lsphotos/image000705.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000269.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000269.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000270.jpg" title="Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000270.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000706.jpg" title="New kits! #lovestarfactoryteam #ladiesoflovestar #fleshleeches" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>New kits! #lovestarfactoryteam #ladiesoflovestar #fleshleeches</small>
-                           </div>
-                           <img src="../lsphotos/image000706.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000271.jpg" title="Regram from @theandyhudson ... love seeing #lovestarbicyclebags in the wild." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Regram from @theandyhudson ... love seeing #lovestarbicyclebags in the wild.</small>
-                           </div>
-                           <img src="../lsphotos/image000271.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000707.jpg" title="Sunrise ride. #lovestarfactoryteam #moots #psychloX #bikechi #cycling #cyclist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride. #lovestarfactoryteam #moots #psychloX #bikechi #cycling #cyclist</small>
-                           </div>
-                           <img src="../lsphotos/image000707.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000708.jpg" title="#babysnub pushing limits. Big thanks to @jwild_photography for capturing this perfect moment...I don't think I'll ever post a better picture on the internets. (She rocked this hill without incident btw) #babyGnar #futurecyclist #lovestarfactoryteam #striderbikes" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babysnub pushing limits. Big thanks to @jwild_photography for capturing this perfect moment...I don't think I'll ever post a better picture on the internets. (She rocked this hill without incident btw) #babyGnar #futurecyclist #lovestarfactoryteam #striderbikes</small>
-                           </div>
-                           <img src="../lsphotos/image000708.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000784.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000784.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
