--- a/instagram26.html
+++ b/instagram26.html
@@ -6,6 +6,101 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000277.jpg" title="Regram from @ddave12000 of this mornings #lovestarfactoryteam ride! Great crew, lots of fun. #Chicago #cycling #cyclist #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Regram from @ddave12000 of this mornings #lovestarfactoryteam ride! Great crew, lots of fun. #Chicago #cycling #cyclist #lovestarbicyclebags #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000277.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000278.jpg" title="Great time riding today with the Lovestar Team. Here is Olivia and Priscilla crushing it at the Fort #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Great time riding today with the Lovestar Team. Here is Olivia and Priscilla crushing it at the Fort #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000278.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000717.jpg" title="#ladiesoflovestar #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>#ladiesoflovestar #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000717.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000279.jpg" title="#flashbackFriday to the Lovestar Factory Team crushing gravel and having a blast at the Almanzo 100. #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclist #gravel #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#flashbackFriday to the Lovestar Factory Team crushing gravel and having a blast at the Almanzo 100. #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclist #gravel #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000279.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000280.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000280.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000281.jpg" title="Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000281.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000282.jpg" title="Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bike commuting for the last 8+ years, I've developed pretty thick skin when it comes to driver road rage. But some days, it can still just set you off in a way that threatens to ruin a ride. One of the benefits of commuting via fat bike, is that you can turn off the route and explore less travelled pathways...today's exploring turned a seething road rage ride into a relaxed & scenic adventure. Life is too short to let others ruin the things you love...so here's to the road less travelled. #bikecommute #fatbike #bikechi #bicycle #cyclist #cycling #lovestarbicyclebags #lovestarfactoryteam #framebag #bikepacking #adventurebike</small>
+                           </div>
+                           <img src="../lsphotos/image000282.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000283.jpg" title="Color matching on my commute today is on fleek. #ijustsaidfleek #cycling #lovestarfactoryteam #lovestarbicyclebags #fatbike #bikecommute #bikechi #bikepacking" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +263,6 @@
                               <small>Climbing! I apologize to all my IG followers. This flat lander is spending a week in the mountains...endless pictures are likely to follow. #cyclist #cycling #lazersport #lovestarfactoryteam #bigsky</small>
                            </div>
                            <img src="../lsphotos/image000726.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000727.jpg" title="#bigsky Montana. Coming from #Chicago where my biggest climbs are highway overpasses...this blows my mind. #cycling #psychloX #cyclist #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#bigsky Montana. Coming from #Chicago where my biggest climbs are highway overpasses...this blows my mind. #cycling #psychloX #cyclist #moots #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000727.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000728.jpg" title="Looks like the #moots survived the journey to #bigsky time to assemble and get my climb on. #cyclist #cycling #psychloX #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Looks like the #moots survived the journey to #bigsky time to assemble and get my climb on. #cyclist #cycling #psychloX #bicycle #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000728.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000729.jpg" title="Gettin' Rad. #babyGnar #babysnub #futurecyclist #striderbikes #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gettin' Rad. #babyGnar #babysnub #futurecyclist #striderbikes #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000729.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000287.jpg" title="I'm convinced that taking two kids on a bike ride to the local park takes almost as much planning and just as much equipment as your average #bikepacking expedition. #fatbike #cycling #bikechi #cyclist #bicycle #futurecyclist #adventuredad #lovestarbicyclebags #bicyclebag #babysnub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I'm convinced that taking two kids on a bike ride to the local park takes almost as much planning and just as much equipment as your average #bikepacking expedition. #fatbike #cycling #bikechi #cyclist #bicycle #futurecyclist #adventuredad #lovestarbicyclebags #bicyclebag #babysnub</small>
-                           </div>
-                           <img src="../lsphotos/image000287.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000288.jpg" title="Took me a while to find a transportation solution for this bike...#RockyMounts came through with their brass knuckles roof rack. Keeps the bike up top in all of its monstrous glory. #fatbike #cyclistproblems #lovestarbicyclebags #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Took me a while to find a transportation solution for this bike...#RockyMounts came through with their brass knuckles roof rack. Keeps the bike up top in all of its monstrous glory. #fatbike #cyclistproblems #lovestarbicyclebags #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000288.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000289.jpg" title="Oasis. #moots #psychloX #cycling #cyclist #bicycle #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Oasis. #moots #psychloX #cycling #cyclist #bicycle #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000289.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000290.jpg" title="Big bird, big tires...happy Friday! #fatbikefriday #fatbike #bicycle #cycling #lovestarfactoryteam #bikechi #lovestarbicyclebags #handmade #bikepacking #framebag #seatbag #bicyclebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Big bird, big tires...happy Friday! #fatbikefriday #fatbike #bicycle #cycling #lovestarfactoryteam #bikechi #lovestarbicyclebags #handmade #bikepacking #framebag #seatbag #bicyclebag</small>
-                           </div>
-                           <img src="../lsphotos/image000290.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
