--- a/instagram28.html
+++ b/instagram28.html
@@ -6,6 +6,101 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000298.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+#lovestarfactoryteam colors add some flash to the matching jumbo sized #lovestarbicyclebags SaddlePack. #bikepacking #bicyclebag #handmade #cycling #fatbike #bicycle #framebag #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+#lovestarfactoryteam colors add some flash to the matching jumbo sized #lovestarbicyclebags SaddlePack. #bikepacking #bicyclebag #handmade #cycling #fatbike #bicycle #framebag #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000298.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000299.jpg" title="#lovestarfactoryteam colors add some flash to the matching jumbo sized #lovestarbicyclebags SaddlePack. #bikepacking #bicyclebag #handmade #cycling #fatbike #bicycle #framebag #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lovestarfactoryteam colors add some flash to the matching jumbo sized #lovestarbicyclebags SaddlePack. #bikepacking #bicyclebag #handmade #cycling #fatbike #bicycle #framebag #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000299.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000300.jpg" title="Close up of the stitching...orange for days. #lovestarbicyclebags #handmade #framebag #bikepacking #bicycle #fatbike #bicyclebag #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Close up of the stitching...orange for days. #lovestarbicyclebags #handmade #framebag #bikepacking #bicycle #fatbike #bicyclebag #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000300.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000301.jpg" title="Still have some interior finishing to do, but this custom #lovestarbicyclebags frame bag is just about done. Color matched contrast stitching really makes for a nice tie in to the frame. #handmade #cycling #bicyclebag #bikepacking #fatbike #bicycle #bikechi #framebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Still have some interior finishing to do, but this custom #lovestarbicyclebags frame bag is just about done. Color matched contrast stitching really makes for a nice tie in to the frame. #handmade #cycling #bicyclebag #bikepacking #fatbike #bicycle #bikechi #framebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000301.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000736.jpg" title="Ah...the McClory path. Every time I ride it I want to find the city planners who designed it and say: &quot;whelp, I'm proud of you for trying.&quot; #fatbike #bikechi #bikecommute #cycling #cyclist #gravelgrinder #bicycle #bicyclebag #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Ah...the McClory path. Every time I ride it I want to find the city planners who designed it and say: "whelp, I'm proud of you for trying." #fatbike #bikechi #bikecommute #cycling #cyclist #gravelgrinder #bicycle #bicyclebag #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000736.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000737.jpg" title="Beautiful morning for a bike ride! #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Beautiful morning for a bike ride! #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000737.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000738.jpg" title="A couple of #lovestarfactoryteam riders doing some grass hill repeats at the local park. #cycling #cyclocross #cx #bikechi #bicycle #striderbikes #fatbike #adventuredad #futurecyclist #babyGnar #babysnub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A couple of #lovestarfactoryteam riders doing some grass hill repeats at the local park. #cycling #cyclocross #cx #bikechi #bicycle #striderbikes #fatbike #adventuredad #futurecyclist #babyGnar #babysnub</small>
+                           </div>
+                           <img src="../lsphotos/image000738.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000302.jpg" title="Color match test... #bikepacking #framebag #handmade #lovestarbicyclebags #bicyclebag #cycling #fatbike #bicycle #bikechi #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -172,97 +267,6 @@
                               <small>Spoils of war. #cycling #cyclist #bikechi #bicycle #thebonebell #lovestarfactoryteam #arrivadolce</small>
                            </div>
                            <img src="../lsphotos/image000744.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000745.jpg" title="Early to bed, early to shred. #cycling #bicycle #bikechi #evanston #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Early to bed, early to shred. #cycling #bicycle #bikechi #evanston #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000745.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000309.jpg" title="Boom! Subtle Grey & Black exterior...blaze orange interior. #lovestarbicyclebags #handmade #seatbag #bikepacking #bikechi #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Boom! Subtle Grey & Black exterior...blaze orange interior. #lovestarbicyclebags #handmade #seatbag #bikepacking #bikechi #cycling #bicyclebag #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000309.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000310.jpg" title="Wrapped up another #lovestarbicyclebags SaddlePack tonight. This is still one of my favorite color combos. More pics soon! #handmade #bicyclebag #bicycle #cycling #bikechi #bicycle #seatbag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Wrapped up another #lovestarbicyclebags SaddlePack tonight. This is still one of my favorite color combos. More pics soon! #handmade #bicyclebag #bicycle #cycling #bikechi #bicycle #seatbag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000310.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000311.jpg" title="Finished up a #lovestarbicyclebags SaddlePack during nap time today. Black and orange really pop together! #cycling #bicycle #handmade #seatbag #bikepacking #bicyclebag #bikechi #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a #lovestarbicyclebags SaddlePack during nap time today. Black and orange really pop together! #cycling #bicycle #handmade #seatbag #bikepacking #bicyclebag #bikechi #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000311.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000312.jpg" title="Early morning miles with the Lovestar Team. Andy was so fast on his new bike, hence the blurriness. #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Early morning miles with the Lovestar Team. Andy was so fast on his new bike, hence the blurriness. #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000312.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000746.jpg" title="New bikes & lots of smiles for an early AM #lovestarfactoryteam ride. #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New bikes & lots of smiles for an early AM #lovestarfactoryteam ride. #cycling #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000746.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000747.jpg" title="Looking forward to my ride in the morning! #lovestarfactoryteam @pearlizumiofficial @rideshimano @icebreakernz" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Looking forward to my ride in the morning! #lovestarfactoryteam @pearlizumiofficial @rideshimano @icebreakernz</small>
-                           </div>
-                           <img src="../lsphotos/image000747.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
