--- a/instagram29.html
+++ b/instagram29.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000745.jpg" title="Early to bed, early to shred. #cycling #bicycle #bikechi #evanston #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Early to bed, early to shred. #cycling #bicycle #bikechi #evanston #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000745.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000309.jpg" title="Boom! Subtle Grey & Black exterior...blaze orange interior. #lovestarbicyclebags #handmade #seatbag #bikepacking #bikechi #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Boom! Subtle Grey & Black exterior...blaze orange interior. #lovestarbicyclebags #handmade #seatbag #bikepacking #bikechi #cycling #bicyclebag #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000309.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000310.jpg" title="Wrapped up another #lovestarbicyclebags SaddlePack tonight. This is still one of my favorite color combos. More pics soon! #handmade #bicyclebag #bicycle #cycling #bikechi #bicycle #seatbag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Wrapped up another #lovestarbicyclebags SaddlePack tonight. This is still one of my favorite color combos. More pics soon! #handmade #bicyclebag #bicycle #cycling #bikechi #bicycle #seatbag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000310.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000311.jpg" title="Finished up a #lovestarbicyclebags SaddlePack during nap time today. Black and orange really pop together! #cycling #bicycle #handmade #seatbag #bikepacking #bicyclebag #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a #lovestarbicyclebags SaddlePack during nap time today. Black and orange really pop together! #cycling #bicycle #handmade #seatbag #bikepacking #bicyclebag #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000311.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000312.jpg" title="Early morning miles with the Lovestar Team. Andy was so fast on his new bike, hence the blurriness. #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Early morning miles with the Lovestar Team. Andy was so fast on his new bike, hence the blurriness. #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000312.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000746.jpg" title="New bikes & lots of smiles for an early AM #lovestarfactoryteam ride. #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New bikes & lots of smiles for an early AM #lovestarfactoryteam ride. #cycling #bicycle #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000746.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000747.jpg" title="Looking forward to my ride in the morning! #lovestarfactoryteam @pearlizumiofficial @rideshimano @icebreakernz" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Looking forward to my ride in the morning! #lovestarfactoryteam @pearlizumiofficial @rideshimano @icebreakernz</small>
+                           </div>
+                           <img src="../lsphotos/image000747.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000313.jpg" title="Inaugural ride on my new rig.  Thanks @velosmith #parleecycles #envecomposites #rideshimano #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -168,97 +259,6 @@
                               <small>#lovestarfactoryteam Rollin' out to the #almanzo100 . Killer crew this year, ready to pull #baby snub to victory. #cyclocross #gravel #gravelgrinder #cycling #bikechi #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000319.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000320.jpg" title="I'm back! After almost a month without access, I am back on the internets...while I was out, had some great rides with the fine folks on the Lovestar Factory Team like the #almanzo100 . Woohoo! #cycling #gravel #gravelgrinder #almanzo2015 #lovestarbicyclebags #lovestarfactoryteam #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I'm back! After almost a month without access, I am back on the internets...while I was out, had some great rides with the fine folks on the Lovestar Factory Team like the #almanzo100 . Woohoo! #cycling #gravel #gravelgrinder #almanzo2015 #lovestarbicyclebags #lovestarfactoryteam #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000320.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000754.jpg" title="#LoveStarFactoryTeam dudes before the race! #Almanzo100 #LSB" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#LoveStarFactoryTeam dudes before the race! #Almanzo100 #LSB</small>
-                           </div>
-                           <img src="../lsphotos/image000754.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000321.jpg" title="Crushing gravel for 100 miles with Team Lovestar for the Almanzo 100. #lovestarbicyclebags #almanzo100" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Crushing gravel for 100 miles with Team Lovestar for the Almanzo 100. #lovestarbicyclebags #almanzo100</small>
-                           </div>
-                           <img src="../lsphotos/image000321.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000322.jpg" title="Lovestar Factory Team on their way to the Almanzo 100 Bike Rice, Spring Valley, Minnesaota. #almanzo100bikerace #almanzo100.bike #lovestarfactoryteam #lovestarbicyclebags #elliotlovestarbicycle #elliotlovestar #elliotlovestarbicyclebags #cycling #cyclocross #bikeracing #bikechicago #cyclocrosschicago #cyclingminnesota #gravelracing #100mileride #100milerace #youguysgotthis" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Lovestar Factory Team on their way to the Almanzo 100 Bike Rice, Spring Valley, Minnesaota. #almanzo100bikerace #almanzo100.bike #lovestarfactoryteam #lovestarbicyclebags #elliotlovestarbicycle #elliotlovestar #elliotlovestarbicyclebags #cycling #cyclocross #bikeracing #bikechicago #cyclocrosschicago #cyclingminnesota #gravelracing #100mileride #100milerace #youguysgotthis</small>
-                           </div>
-                           <img src="../lsphotos/image000322.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000323.jpg" title="Crushing gravel on the Des Plaines River Trail, Team Lovestar style! #lovestarbicyclebags #bikechi #ijustwanttoridebikeswithyou" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Crushing gravel on the Des Plaines River Trail, Team Lovestar style! #lovestarbicyclebags #bikechi #ijustwanttoridebikeswithyou</small>
-                           </div>
-                           <img src="../lsphotos/image000323.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000324.jpg" title="Finally was able to finish up this Grey and Black #lovestarbicyclebags SaddlePack. Subtle exterior hides a blaze orange interior. #handmade #cycling #bicycle #bicyclebag #bikechi #bikepacking #seatbag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finally was able to finish up this Grey and Black #lovestarbicyclebags SaddlePack. Subtle exterior hides a blaze orange interior. #handmade #cycling #bicycle #bicyclebag #bikechi #bikepacking #seatbag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000324.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000325.jpg" title="I think Billy Idol said it best: &quot;nice day for... bike riding...&quot; Or something like that. #lovestarbicyclebags #bikechi #itsspringagain" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>I think Billy Idol said it best: "nice day for... bike riding..." Or something like that. #lovestarbicyclebags #bikechi #itsspringagain</small>
-                           </div>
-                           <img src="../lsphotos/image000325.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
