--- a/instagram31.html
+++ b/instagram31.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000338.jpg" title="Batch of #Lovestarbicyclebags SaddlePacks in the works. Racing stripes all around! #handmade #custom #cycling #bicycle #bikebag #bikepacking #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Batch of #Lovestarbicyclebags SaddlePacks in the works. Racing stripes all around! #handmade #custom #cycling #bicycle #bikebag #bikepacking #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000338.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000756.jpg" title="Sunshine and glory. #LSB #LoveStarFactoryTeam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Sunshine and glory. #LSB #LoveStarFactoryTeam</small>
+                           </div>
+                           <img src="../lsphotos/image000756.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000339.jpg" title="Custom #lovestarbicyclebags SaddlePack in progress. this one has some killer stripes to match the customer's bicycle. #handmade #bikepacking #bicyclebag #cycling #bicycle #seatbag #custom #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #lovestarbicyclebags SaddlePack in progress. this one has some killer stripes to match the customer's bicycle. #handmade #bikepacking #bicyclebag #cycling #bicycle #seatbag #custom #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000339.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000340.jpg" title="Bag orders with racing stripes make me happy. Spent part of the afternoon cutting fabric for a Couple of sweet saddle packs...pics to follow soon! #lovestarbicyclebags #handmade #bikepacking #bikebag #bicycle #cycling #seatbag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bag orders with racing stripes make me happy. Spent part of the afternoon cutting fabric for a Couple of sweet saddle packs...pics to follow soon! #lovestarbicyclebags #handmade #bikepacking #bikebag #bicycle #cycling #seatbag</small>
+                           </div>
+                           <img src="../lsphotos/image000340.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000341.jpg" title="Racing stripes are also available in #Lovestarbicyclebags Saddle Packs. #handmade #bicycle #bikebag #bikechi #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Racing stripes are also available in #Lovestarbicyclebags Saddle Packs. #handmade #bicycle #bikebag #bikechi #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000341.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000342.jpg" title="Some recent examples of custom color #Lovestarbicyclebags Saddle Packs. More examples available on ETSY and Facebook. #handmade #cycling #bikebag #bikepacking #bicycle #bicyclebag #custom #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some recent examples of custom color #Lovestarbicyclebags Saddle Packs. More examples available on ETSY and Facebook. #handmade #cycling #bikebag #bikepacking #bicycle #bicyclebag #custom #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000342.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000343.jpg" title="@agonz21 crushing ravine climbs and taking names. #lovestarbicyclebags #cycling #cyclocross #cx #bicycle #bikechi #barryroubaix" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@agonz21 crushing ravine climbs and taking names. #lovestarbicyclebags #cycling #cyclocross #cx #bicycle #bikechi #barryroubaix</small>
+                           </div>
+                           <img src="../lsphotos/image000343.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000344.jpg" title="Lovestar Factory Team cramming in some hill repeats before Barry Roubaix. #lovestarbicyclebags #cycling #barryroubaix #cx #cyclocross #gravel #gravelgrinder #bicycle #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Lovestar Factory Team ride. #lovestarbicyclebags #bikechi #chiberia #chicago #bikewinter #championsystem</small>
                            </div>
                            <img src="../lsphotos/image000356.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000357.jpg" title="It's been single digits for the last two weeks...#Cyclocross in shorts seems like a distant dream. Spring, you are welcome anytime. #cx #cycling #chicago #chiberia #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>It's been single digits for the last two weeks...#Cyclocross in shorts seems like a distant dream. Spring, you are welcome anytime. #cx #cycling #chicago #chiberia #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000357.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000358.jpg" title="Working on bags for a couple of customers during the kids nap time today. #dadlife #cycling #lovestarbicyclebags #handmade #custom #bikepacking #bikecamping #seatbag #bicycle #bikechi #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Working on bags for a couple of customers during the kids nap time today. #dadlife #cycling #lovestarbicyclebags #handmade #custom #bikepacking #bikecamping #seatbag #bicycle #bikechi #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000358.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000359.jpg" title="Custom #GravelGrinder bag set to brighten up another grey #chiberia winter ride. Custom bags and colors available! Get your orders in before gravel season hits. #gravel #bikewinter #bikepacking #bikecamping #custom #handmade #lovestarbicyclebags #bikechi #cycling #moots #bicycle #SewRad #nofilter" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #GravelGrinder bag set to brighten up another grey #chiberia winter ride. Custom bags and colors available! Get your orders in before gravel season hits. #gravel #bikewinter #bikepacking #bikecamping #custom #handmade #lovestarbicyclebags #bikechi #cycling #moots #bicycle #SewRad #nofilter</small>
-                           </div>
-                           <img src="../lsphotos/image000359.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000360.jpg" title="Lovestar Factory Team in the pain cave at the training hub his morning. #lovestarbicyclebags #cycling #bicycle #training #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team in the pain cave at the training hub his morning. #lovestarbicyclebags #cycling #bicycle #training #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000360.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000361.jpg" title="Finished up a very slick Black & Purple Saddle Pack for a customer. #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #bikebag #saddlebag #seatbag #bikechi #cordura #custom #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a very slick Black & Purple Saddle Pack for a customer. #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #bikebag #saddlebag #seatbag #bikechi #cordura #custom #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000361.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000362.jpg" title="Received a re-supply order of Lovestar badges just in time to start a fun customer project! #lovestarbicyclebags #handmade #bikepacking #bikebag #MUSA #Cycling #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Received a re-supply order of Lovestar badges just in time to start a fun customer project! #lovestarbicyclebags #handmade #bikepacking #bikebag #MUSA #Cycling #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000362.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000363.jpg" title="Snow biking! #lovestarbicyclebags #babysnub #striderbikes #futurecyclist #bikechi #chiberia #evanston #cycling #pushbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Snow biking! #lovestarbicyclebags #babysnub #striderbikes #futurecyclist #bikechi #chiberia #evanston #cycling #pushbike</small>
-                           </div>
-                           <img src="../lsphotos/image000363.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
