--- a/instagram33.html
+++ b/instagram33.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000377.jpg" title="Happy New Year! I don't know about anybody else...but I've ridden my bike to work every day this year. #cycling #moots #bikecommute #bikechi #bicycle #lovestarbicyclebags #barmitts" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy New Year! I don't know about anybody else...but I've ridden my bike to work every day this year. #cycling #moots #bikecommute #bikechi #bicycle #lovestarbicyclebags #barmitts</small>
+                           </div>
+                           <img src="../lsphotos/image000377.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000378.jpg" title="Custom Lovestar #framebag. Still have a few more things to finish up...but it's getting there quickly. #lovestarbicyclebags #bikepacking #bikebag #custom #cycling #handmade #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom Lovestar #framebag. Still have a few more things to finish up...but it's getting there quickly. #lovestarbicyclebags #bikepacking #bikebag #custom #cycling #handmade #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000378.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000379.jpg" title="Custom Framebag Velcro coming along... #bikepacking #lovestarbicyclebags #cycling #handmade #Bicycle #bikechi #framebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom Framebag Velcro coming along... #bikepacking #lovestarbicyclebags #cycling #handmade #Bicycle #bikechi #framebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000379.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000380.jpg" title="The Lovestar Shop Apron features a sewn-in magnetic disc to hold those small bits while you work. #nextlevel #SewRad #lovestarbicyclebags #handmade #cycling #Bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The Lovestar Shop Apron features a sewn-in magnetic disc to hold those small bits while you work. #nextlevel #SewRad #lovestarbicyclebags #handmade #cycling #Bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000380.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000381.jpg" title="The Lovestar Shop Apron is now up on my ETSY page! More photos are available on Facebook (Lovestar Bicycle Bags) hoping to get some higher quality pics ASAP. #handmade #lovestarbicyclebags #cycling #tools #shopapron #Bicycle #mechanic #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The Lovestar Shop Apron is now up on my ETSY page! More photos are available on Facebook (Lovestar Bicycle Bags) hoping to get some higher quality pics ASAP. #handmade #lovestarbicyclebags #cycling #tools #shopapron #Bicycle #mechanic #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000381.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000382.jpg" title="A very bicycle Christmas. Pro tools for next years #cyclocross season! #cx #bicycle #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A very bicycle Christmas. Pro tools for next years #cyclocross season! #cx #bicycle #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000382.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000383.jpg" title="Go my first #Festive500 kilometers in today. Merry Christmas Eve!! #rapha #moots #gingerbreadcyclist #christmasride #cycling #cyclocross #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Go my first #Festive500 kilometers in today. Merry Christmas Eve!! #rapha #moots #gingerbreadcyclist #christmasride #cycling #cyclocross #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000383.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000384.jpg" title="My bike in adventure mode post #cyclocross season. Did just over 50 miles today. 34 degrees with freezing rain and some snow. Was able to hit the #DPRT the #GreenBayTrail an the #McClory path all in the same ride. #lovestarbicyclebags #cycling #gravelgrinder #moots #adventureisOutThere #cx" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Pre-turkey rollers. Happy Thanksgiving everyone! Earn that turkey! #turkeyride #rollers #cycling #bikechi #lovestarbicycles #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000396.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000397.jpg" title="Killer shot from the sand at #MelasCX Thanks to #jayloophotography for always making me look better than I am. #cyclocross #sandpit #cx #cycling #chicagocrosscup #bikechi #bicycle #belgianstyle #mud #race #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Killer shot from the sand at #MelasCX Thanks to #jayloophotography for always making me look better than I am. #cyclocross #sandpit #cx #cycling #chicagocrosscup #bikechi #bicycle #belgianstyle #mud #race #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000397.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000398.jpg" title="Thanks to @pattylouwho55 for the great pic! Lovestar Factory Team looking strong in the Sand at #MelasCX #cyclocross #cx #chicagocrosscup #bikechi #sandpit #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Thanks to @pattylouwho55 for the great pic! Lovestar Factory Team looking strong in the Sand at #MelasCX #cyclocross #cx #chicagocrosscup #bikechi #sandpit #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000398.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000399.jpg" title="Lovestar Factory Team riders before #MelasCX . It was a very Belgian course with lots of mud, rain and sand. Killer conditions, thanks to the organizers for a great race! #cyclocross #cx #chicagocrosscup #bikechi #lovestarbicyles #lovestarbicyclebags #melascx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team riders before #MelasCX . It was a very Belgian course with lots of mud, rain and sand. Killer conditions, thanks to the organizers for a great race! #cyclocross #cx #chicagocrosscup #bikechi #lovestarbicyles #lovestarbicyclebags #melascx</small>
-                           </div>
-                           <img src="../lsphotos/image000399.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000400.jpg" title="Happy Birthday to another Lovestar Factory racer in the making! I'm sure we'll see her out on the course next season!!! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Happy Birthday to another Lovestar Factory racer in the making! I'm sure we'll see her out on the course next season!!! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing</small>
-                           </div>
-                           <img src="../lsphotos/image000400.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000401.jpg" title="End of a long grueling race. Tougher the conditions, sweeter the finish! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>End of a long grueling race. Tougher the conditions, sweeter the finish! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing</small>
-                           </div>
-                           <img src="../lsphotos/image000401.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000402.jpg" title="Go @elliotlovestarbicycles! Pounding through that deep wet sand. Tough course. Tough conditions. Awesome ride. Pushing through to the end! #cyclocrosschicago #cyclocross #cycling #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags #lovestar #bikeracing" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Go @elliotlovestarbicycles! Pounding through that deep wet sand. Tough course. Tough conditions. Awesome ride. Pushing through to the end! #cyclocrosschicago #cyclocross #cycling #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags #lovestar #bikeracing</small>
-                           </div>
-                           <img src="../lsphotos/image000402.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000403.jpg" title="Great race today on a grueling course with tough, cold, rain, and muddy conditions. Go Lovestar Factory team! #lovestar #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclocross #bikeracing #elliotlovestar" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Great race today on a grueling course with tough, cold, rain, and muddy conditions. Go Lovestar Factory team! #lovestar #lovestarfactoryteam #lovestarbicyclebags #cyclocrosschicago #cycling #cyclocross #bikeracing #elliotlovestar</small>
-                           </div>
-                           <img src="../lsphotos/image000403.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
