--- a/instagram36.html
+++ b/instagram36.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000437.jpg" title="Yesterday's evening ride with teammate @agonz21 I may be a bit biased but these kits look so dope. #lovestarbicycles #lovestarbicyclebags #bikechi #cycling #roadie #bicycle #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Yesterday's evening ride with teammate @agonz21 I may be a bit biased but these kits look so dope. #lovestarbicycles #lovestarbicyclebags #bikechi #cycling #roadie #bicycle #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000437.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000438.jpg" title="Delivered this custom framebag today. XL frame on this Novara Buzz made for a BIG frame bag. Lots of cargo space for the next commute or pedal powered adventure! (Customer gets to trim the Velcro to taste) #handmade #bikechi #bikepacking #framebag #madeinchicago #novara #lovestarbicycles #lovestarbicyclebags #cycling #bicycle #bikebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Delivered this custom framebag today. XL frame on this Novara Buzz made for a BIG frame bag. Lots of cargo space for the next commute or pedal powered adventure! (Customer gets to trim the Velcro to taste) #handmade #bikechi #bikepacking #framebag #madeinchicago #novara #lovestarbicycles #lovestarbicyclebags #cycling #bicycle #bikebag</small>
+                           </div>
+                           <img src="../lsphotos/image000438.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000439.jpg" title="Prototype Lovestar shop apron. Electric blue, Lime green and black turned out a bit more TRON inspired than I had anticipated, but still pretty sick. More pics going up on Facebook #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikeshop #sewrad #bikemechanic #biketools #wrenchlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Prototype Lovestar shop apron. Electric blue, Lime green and black turned out a bit more TRON inspired than I had anticipated, but still pretty sick. More pics going up on Facebook #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikeshop #sewrad #bikemechanic #biketools #wrenchlife</small>
+                           </div>
+                           <img src="../lsphotos/image000439.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000440.jpg" title="Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring</small>
+                           </div>
+                           <img src="../lsphotos/image000440.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000441.jpg" title="Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000441.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000442.jpg" title="Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag</small>
+                           </div>
+                           <img src="../lsphotos/image000442.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000443.jpg" title="Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000443.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000444.jpg" title="Today's ride was about trying to outrun the rain. Great group, tough ride, knobbies made me work a little extra today. Stupendous waffle for a well earned post ride reward. #lovestarbicyclebags #cycling #cyclocross #bikechi #moots #liegewaffle #delbescorner" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>And a close-up. #lovestarbicyclebags #bikebag #bikechi #handmade #bikepacking</small>
                            </div>
                            <img src="../lsphotos/image000455.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000456.jpg" title="Finished up a custom Fuel Bag for a customer today. Black and red looked so good I had to use my own bike for the photoshoot. #custom #handmade #madeinchicago #bikechi #bikepacking #cycling #bikebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a custom Fuel Bag for a customer today. Black and red looked so good I had to use my own bike for the photoshoot. #custom #handmade #madeinchicago #bikechi #bikepacking #cycling #bikebag #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000456.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000457.jpg" title="The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000457.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000458.jpg" title="The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000458.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000459.jpg" title="Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag</small>
-                           </div>
-                           <img src="../lsphotos/image000459.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000460.jpg" title="Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000460.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000461.jpg" title="More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome</small>
-                           </div>
-                           <img src="../lsphotos/image000461.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000462.jpg" title="Finished up this slick Saddle Pack tonight. Shipping out to Germany tomorrow! Grey with blaze orange turned out really well, still one of my favorite color combos #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #custom" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this slick Saddle Pack tonight. Shipping out to Germany tomorrow! Grey with blaze orange turned out really well, still one of my favorite color combos #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #custom</small>
-                           </div>
-                           <img src="../lsphotos/image000462.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
