--- a/instagram37.html
+++ b/instagram37.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000456.jpg" title="Finished up a custom Fuel Bag for a customer today. Black and red looked so good I had to use my own bike for the photoshoot. #custom #handmade #madeinchicago #bikechi #bikepacking #cycling #bikebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a custom Fuel Bag for a customer today. Black and red looked so good I had to use my own bike for the photoshoot. #custom #handmade #madeinchicago #bikechi #bikepacking #cycling #bikebag #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000456.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000457.jpg" title="The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000457.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000458.jpg" title="The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000458.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000459.jpg" title="Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag</small>
+                           </div>
+                           <img src="../lsphotos/image000459.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000460.jpg" title="Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000460.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000461.jpg" title="More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome</small>
+                           </div>
+                           <img src="../lsphotos/image000461.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000462.jpg" title="Finished up this slick Saddle Pack tonight. Shipping out to Germany tomorrow! Grey with blaze orange turned out really well, still one of my favorite color combos #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #custom" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up this slick Saddle Pack tonight. Shipping out to Germany tomorrow! Grey with blaze orange turned out really well, still one of my favorite color combos #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #custom</small>
+                           </div>
+                           <img src="../lsphotos/image000462.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000463.jpg" title="Lots of Saddle Packs in the works this weekend. #lovestarbicyclebags #handmade #cycling #bikechi #bikepacking #custom" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>There's more than one way to prove how much you've been riding. #cycling #bikechi #lovestarbicyclebags #coffeerides</small>
                            </div>
                            <img src="../lsphotos/image000475.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000476.jpg" title="Coming soon to the streets of Chicagoland. #bikechi #cycling #championsystems #lovestarbicyclebags #customkit #styles4miles" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Coming soon to the streets of Chicagoland. #bikechi #cycling #championsystems #lovestarbicyclebags #customkit #styles4miles</small>
-                           </div>
-                           <img src="../lsphotos/image000476.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000477.jpg" title="Judson to cemetery, solo to Illinois Beach State Park & then on to the in-laws in Winthrop Harbor. #lakemichigan #cycling #bikechi #lovestarbicyclebags #bmc #slx01 #lazer #smithoptics #illinoisbeachstatepark" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Judson to cemetery, solo to Illinois Beach State Park & then on to the in-laws in Winthrop Harbor. #lakemichigan #cycling #bikechi #lovestarbicyclebags #bmc #slx01 #lazer #smithoptics #illinoisbeachstatepark</small>
-                           </div>
-                           <img src="../lsphotos/image000477.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000478.jpg" title="So much good in this post ride picture. #belgian #waffles #moots #springflowers #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>So much good in this post ride picture. #belgian #waffles #moots #springflowers #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000478.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000479.jpg" title="Sunset group ride. #bikechi #velosmith #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunset group ride. #bikechi #velosmith #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000479.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000480.jpg" title="Trying to finish up one more Saddle Pack for a customer before heading out to #Denver tomorrow... #lovestarbicyclebags #handmade #bikechi #bikepacking #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Trying to finish up one more Saddle Pack for a customer before heading out to #Denver tomorrow... #lovestarbicyclebags #handmade #bikechi #bikepacking #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000480.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000481.jpg" title="Putting some finishing touches on a set of Lovestar bags for a customer. Grey & Black with yellow interiors, this saddle pack / fuel bag combo makes a great do-anything bag combo. #handmade #cycling #bikechi #lovestarbicyclebags #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Putting some finishing touches on a set of Lovestar bags for a customer. Grey & Black with yellow interiors, this saddle pack / fuel bag combo makes a great do-anything bag combo. #handmade #cycling #bikechi #lovestarbicyclebags #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000481.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000482.jpg" title="Lovestar Saddle Pack & Fuel Bag combo in progress for a customer. The Grey with black trim & yellow interior is really poppin' #lovestarbicyclebags #cycling #bikepacking #bikechi #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Saddle Pack & Fuel Bag combo in progress for a customer. The Grey with black trim & yellow interior is really poppin' #lovestarbicyclebags #cycling #bikepacking #bikechi #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000482.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
