--- a/instagram5.html
+++ b/instagram5.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000093.jpg" title="Custom #LovestarBicycleBags shop apron on the sewing table right now. Really digging the color combo. #handmade #bikemechanic #cycling #bicycle #shoplife #realmenwearaprons #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #LovestarBicycleBags shop apron on the sewing table right now. Really digging the color combo. #handmade #bikemechanic #cycling #bicycle #shoplife #realmenwearaprons #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000093.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000009.jpg" title="Just two dudes on a bike ride. Eli rocking that #lovestarraceclub 2.0 kit. Also he legit brought a wrench with him in one of his jersey pockets and stopped several times to &quot;fix&quot; his bike." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Just two dudes on a bike ride. Eli rocking that #lovestarraceclub 2.0 kit. Also he legit brought a wrench with him in one of his jersey pockets and stopped several times to "fix" his bike.</small>
+                           </div>
+                           <img src="../lsphotos/image000009.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000029.jpg" title="Lovestar WI edition to Cedarburg with bonus #leafpeeping #myparlee #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Lovestar WI edition to Cedarburg with bonus #leafpeeping #myparlee #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000029.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000030.jpg" title="Cold morning & New kit day! #cycling #bicycle #capsnothats #champsys #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold morning & New kit day! #cycling #bicycle #capsnothats #champsys #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000030.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000031.jpg" title="Cold fall ride calls for coffee inside. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Cold fall ride calls for coffee inside. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000031.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000032.jpg" title="New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New Lovestar Race Club cycling caps! #capsnothats #cycling #bicycle #champsys #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000032.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000033.jpg" title="New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>New club kits comin'atchya #LovestarRaceClub #cycling #bicycle #champsys #kitsonfleek</small>
+                           </div>
+                           <img src="../lsphotos/image000033.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000034.jpg" title="Focused on his Focus. #focusbikes #lovestarraceclub #carpentercx" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>oliviabeaty</h4>
@@ -168,97 +259,6 @@
                               <small>Black & Lime #LovestarBicycleBags SaddlePack was today's project while the kids were napping. #dadlife #handmade #bicyclebag #cycling #bicycle #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000097.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000043.jpg" title="Fall sunrise ride #cycling #bicycle #lakeMichigan #ridecannondale #bikechi #coffeeride #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fall sunrise ride #cycling #bicycle #lakeMichigan #ridecannondale #bikechi #coffeeride #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000043.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000044.jpg" title="Great lineup. #LovestarRaceClub #thePonyShop #ridecannondale" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Great lineup. #LovestarRaceClub #thePonyShop #ridecannondale</small>
-                           </div>
-                           <img src="../lsphotos/image000044.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000045.jpg" title="#LovestarRaceClub tearing up the CX course today. Nice work @casa.de.cross & @ddave12000 #bicycle #bikechi #chicagocrosscup" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#LovestarRaceClub tearing up the CX course today. Nice work @casa.de.cross & @ddave12000 #bicycle #bikechi #chicagocrosscup</small>
-                           </div>
-                           <img src="../lsphotos/image000045.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000046.jpg" title="A very wet #rulenumber5 kind of ride today. Breaking in my new bike in just about the most Belgian way possible. #LovestarRaceClub #ridecannondale #bikechi #cycling #bicycle #toolsnotjewels" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A very wet #rulenumber5 kind of ride today. Breaking in my new bike in just about the most Belgian way possible. #LovestarRaceClub #ridecannondale #bikechi #cycling #bicycle #toolsnotjewels</small>
-                           </div>
-                           <img src="../lsphotos/image000046.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000047.jpg" title="Sometimes getting dropped means you have time to stop and take a picture... #cycling #bikechi #lakemichigan #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sometimes getting dropped means you have time to stop and take a picture... #cycling #bikechi #lakemichigan #ridecannondale #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000047.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000048.jpg" title="#cycling #bicycle #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#cycling #bicycle #ridecannondale #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000048.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000049.jpg" title="@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000049.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
