--- a/instagram6.html
+++ b/instagram6.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000043.jpg" title="Fall sunrise ride #cycling #bicycle #lakeMichigan #ridecannondale #bikechi #coffeeride #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fall sunrise ride #cycling #bicycle #lakeMichigan #ridecannondale #bikechi #coffeeride #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000043.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000044.jpg" title="Great lineup. #LovestarRaceClub #thePonyShop #ridecannondale" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Great lineup. #LovestarRaceClub #thePonyShop #ridecannondale</small>
+                           </div>
+                           <img src="../lsphotos/image000044.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000045.jpg" title="#LovestarRaceClub tearing up the CX course today. Nice work @casa.de.cross & @ddave12000 #bicycle #bikechi #chicagocrosscup" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#LovestarRaceClub tearing up the CX course today. Nice work @casa.de.cross & @ddave12000 #bicycle #bikechi #chicagocrosscup</small>
+                           </div>
+                           <img src="../lsphotos/image000045.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000046.jpg" title="A very wet #rulenumber5 kind of ride today. Breaking in my new bike in just about the most Belgian way possible. #LovestarRaceClub #ridecannondale #bikechi #cycling #bicycle #toolsnotjewels" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A very wet #rulenumber5 kind of ride today. Breaking in my new bike in just about the most Belgian way possible. #LovestarRaceClub #ridecannondale #bikechi #cycling #bicycle #toolsnotjewels</small>
+                           </div>
+                           <img src="../lsphotos/image000046.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000047.jpg" title="Sometimes getting dropped means you have time to stop and take a picture... #cycling #bikechi #lakemichigan #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sometimes getting dropped means you have time to stop and take a picture... #cycling #bikechi #lakemichigan #ridecannondale #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000047.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000048.jpg" title="#cycling #bicycle #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#cycling #bicycle #ridecannondale #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000048.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000049.jpg" title="@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@theandyhudson looking like he got a workout this morning 🚲😅 #cycling #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000049.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000050.jpg" title="Thanks to @theandyhudson @ddave12000 & Ben M. For keeping me motivated when getting up to ride in the dark gets hard. And here's a picture of my bike...because it's new and I'm obsessed with it. #cycling #bicycle #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Waking up in the dark to ride everyday can be tough...but I never get tired of sunrises over the Lake #bikechi #lakemichigan #bicycle #cycling #bike #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000057.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000059.jpg" title="The man who started it all, and to whom I owe a great deal. The man, the myth, the legend, @elliotlovestarbicycles #lovestarraceclub #laborday #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>The man who started it all, and to whom I owe a great deal. The man, the myth, the legend, @elliotlovestarbicycles #lovestarraceclub #laborday #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000059.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000060.jpg" title="Great group this morning for a ride in perfect weather. #LovestarRaceClub #SmileLikeYouMeanIt #Cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Great group this morning for a ride in perfect weather. #LovestarRaceClub #SmileLikeYouMeanIt #Cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000060.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000061.jpg" title="Mini cyclocross practice on a beautiful summer evening. #bicycle #cycling #cyclocross #crossiscoming #cx #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Mini cyclocross practice on a beautiful summer evening. #bicycle #cycling #cyclocross #crossiscoming #cx #adventuredad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000061.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000062.jpg" title="Got an early morning ride with my dad this morning! #cycling #bicycle #bikechi #evanston #lovestarraceclub #adventuredad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Got an early morning ride with my dad this morning! #cycling #bicycle #bikechi #evanston #lovestarraceclub #adventuredad</small>
-                           </div>
-                           <img src="../lsphotos/image000062.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000063.jpg" title="First ride post adventure....phew, my legs are still tired. 🚲😳 #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First ride post adventure....phew, my legs are still tired. 🚲😳 #cycling #bicycle #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000063.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000064.jpg" title="Definitely cleared that barrier! #lovestarraceclub #cxrelay #crossishere" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Definitely cleared that barrier! #lovestarraceclub #cxrelay #crossishere</small>
-                           </div>
-                           <img src="../lsphotos/image000064.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000065.jpg" title="Somebody is loving his new bike! #jnbs #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Somebody is loving his new bike! #jnbs #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000065.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
