--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000059.jpg" title="The man who started it all, and to whom I owe a great deal. The man, the myth, the legend, @elliotlovestarbicycles #lovestarraceclub #laborday #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>The man who started it all, and to whom I owe a great deal. The man, the myth, the legend, @elliotlovestarbicycles #lovestarraceclub #laborday #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000059.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000060.jpg" title="Great group this morning for a ride in perfect weather. #LovestarRaceClub #SmileLikeYouMeanIt #Cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Great group this morning for a ride in perfect weather. #LovestarRaceClub #SmileLikeYouMeanIt #Cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000060.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000061.jpg" title="Mini cyclocross practice on a beautiful summer evening. #bicycle #cycling #cyclocross #crossiscoming #cx #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Mini cyclocross practice on a beautiful summer evening. #bicycle #cycling #cyclocross #crossiscoming #cx #adventuredad #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000061.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000062.jpg" title="Got an early morning ride with my dad this morning! #cycling #bicycle #bikechi #evanston #lovestarraceclub #adventuredad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Got an early morning ride with my dad this morning! #cycling #bicycle #bikechi #evanston #lovestarraceclub #adventuredad</small>
+                           </div>
+                           <img src="../lsphotos/image000062.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000063.jpg" title="First ride post adventure....phew, my legs are still tired. 🚲😳 #cycling #bicycle #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First ride post adventure....phew, my legs are still tired. 🚲😳 #cycling #bicycle #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000063.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000064.jpg" title="Definitely cleared that barrier! #lovestarraceclub #cxrelay #crossishere" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Definitely cleared that barrier! #lovestarraceclub #cxrelay #crossishere</small>
+                           </div>
+                           <img src="../lsphotos/image000064.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000065.jpg" title="Somebody is loving his new bike! #jnbs #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Somebody is loving his new bike! #jnbs #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000065.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000066.jpg" title="Great recovery ride with the Harriff Boyz. Even got to ride through The Funnel. #lovestarraceclub #funnel" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -168,97 +259,6 @@
                               <small>Sunset gear shakedown. Dinner...sleep...then trail time begins! #bikepacking #bicycle #bikecamping #cycling #mthood #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000109.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000076.jpg" title="All smiles as we carb up for our epic Mt Hood ride #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>All smiles as we carb up for our epic Mt Hood ride #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000076.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000110.jpg" title="Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000110.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000111.jpg" title="Finished up a handlebar grab bag. The whole #bikepacking kit is starting to come together. #lovestarbicyclebags #handmade #bikechi #adventurebike #fatbike #bicyclebag #bicycle #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a handlebar grab bag. The whole #bikepacking kit is starting to come together. #lovestarbicyclebags #handmade #bikechi #adventurebike #fatbike #bicyclebag #bicycle #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000111.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000112.jpg" title="Had to take some pictures of my gear with some better light. #Bikepacking #bicycle #fatbike #adventurebike #bikechi #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Had to take some pictures of my gear with some better light. #Bikepacking #bicycle #fatbike #adventurebike #bikechi #handmade #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000112.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000113.jpg" title="Added a couple of top tube bags to my personal setup in preparation for Mt. Hood. #Handmade #lovestarbicyclebags #Bikepacking #bicycle #fatbike #adventurebike #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Added a couple of top tube bags to my personal setup in preparation for Mt. Hood. #Handmade #lovestarbicyclebags #Bikepacking #bicycle #fatbike #adventurebike #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000113.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000084.jpg" title="T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image000084.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000077.jpg" title="Sunrise Coffee Ride #bicycle #cycling #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise Coffee Ride #bicycle #cycling #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000077.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
