--- a/instagram9.html
+++ b/instagram9.html
@@ -6,6 +6,97 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000550.jpg" title="Fellowship of the Big Ring. #bicycle #cycling #coffeeride #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fellowship of the Big Ring. #bicycle #cycling #coffeeride #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000550.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000533.jpg" title="Saturday afternoons are good for bike washing. #lovestarfactoryteam #ridecannondale #supersixevo #cleanbike #baaw" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Saturday afternoons are good for bike washing. #lovestarfactoryteam #ridecannondale #supersixevo #cleanbike #baaw</small>
+                           </div>
+                           <img src="../lsphotos/image000533.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000551.jpg" title="It was a close race...but @agonz21 with his blue bike edged me out in the match-your-accessories-to-your-kit game today. #cycling #bicycle #lovestarfactoryteam #bikesonfleek" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>It was a close race...but @agonz21 with his blue bike edged me out in the match-your-accessories-to-your-kit game today. #cycling #bicycle #lovestarfactoryteam #bikesonfleek</small>
+                           </div>
+                           <img src="../lsphotos/image000551.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000552.jpg" title="Couldn't find my sunglasses his morning...had to go full spaceman. #aeroiseverything #lovestarfactoryteam #cycling #bicycle #bikechi #BikeToTheFuture" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Couldn't find my sunglasses his morning...had to go full spaceman. #aeroiseverything #lovestarfactoryteam #cycling #bicycle #bikechi #BikeToTheFuture</small>
+                           </div>
+                           <img src="../lsphotos/image000552.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000538.jpg" title="From today's ride. #mocabang #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>From today's ride. #mocabang #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000538.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000080.jpg" title="Smiles for miles on this morning's sunrise team ride. #LovestarRaceClub #bicycle #bikechi #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Smiles for miles on this morning's sunrise team ride. #LovestarRaceClub #bicycle #bikechi #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000080.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000118.jpg" title="Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000118.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000119.jpg" title="Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -168,97 +259,6 @@
                               <small>Sunrise coffee rides. #lovestarfactoryteam #bicycle #cycling #coffeeride</small>
                            </div>
                            <img src="../lsphotos/image000561.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000536.jpg" title="Post-ride snuggles with my favorite teammate. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Post-ride snuggles with my favorite teammate. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000536.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000539.jpg" title="Birthday ride treats! European desserts at #gerhardsbakery thanks @pattylouwho55 for the inspiration! #lovestarfactoryteam #champsys #lavazza" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Birthday ride treats! European desserts at #gerhardsbakery thanks @pattylouwho55 for the inspiration! #lovestarfactoryteam #champsys #lavazza</small>
-                           </div>
-                           <img src="../lsphotos/image000539.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000562.jpg" title="Wisconsin riding...#lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Wisconsin riding...#lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000562.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000563.jpg" title="Summer Love. #lovestarfactoryteam #theponyshop #moots #psychloX #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Summer Love. #lovestarfactoryteam #theponyshop #moots #psychloX #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000563.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000564.jpg" title="Nice kits...#lovestarfactoryteam #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Nice kits...#lovestarfactoryteam #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000564.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000565.jpg" title="#lovestarfactoryteam had their sock game on fleek this morning. #sockdoping #bicycle #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam had their sock game on fleek this morning. #sockdoping #bicycle #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000565.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000566.jpg" title="Woohoo! 206.4 miles, 9000+ calories, and 17.5 hours later I finished the Dirty Kanza 200! Special thanks and so much love to my wife, Roberta for supporting all my crazy training!! Big shout out to @casadewaggoner and @elliotlovestarbicycles for doing this with me, sorry your days didn't end the way you hoped! :-( Big thank you to Matt for being our support crew. And special thanks to @ponylou and the crew at #ponyshop for making sure my bike was in tip top shape. And finally, special thanks to David Englund for teaching how to keep going when it feels like I've got nothing left. #lovestarfactoryteam #crushgravel #dk200 #superx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Woohoo! 206.4 miles, 9000+ calories, and 17.5 hours later I finished the Dirty Kanza 200! Special thanks and so much love to my wife, Roberta for supporting all my crazy training!! Big shout out to @casadewaggoner and @elliotlovestarbicycles for doing this with me, sorry your days didn't end the way you hoped! :-( Big thank you to Matt for being our support crew. And special thanks to @ponylou and the crew at #ponyshop for making sure my bike was in tip top shape. And finally, special thanks to David Englund for teaching how to keep going when it feels like I've got nothing left. #lovestarfactoryteam #crushgravel #dk200 #superx</small>
-                           </div>
-                           <img src="../lsphotos/image000566.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
